--- a/rush.yaml
+++ b/rush.yaml
@@ -18890,7 +18890,7 @@ name:
   pt:
   ja: <ruby>１０ｓｉｏｎ<rt>テンション</rt></ruby><ruby>ＭＡＸ<rt>マックス</rt></ruby>！！！
   ja_romaji: Tenshon Makkusu!!!
-  ko: <ruby10sionMAX<rt>텐션맥스</rt></ruby>!!!
+  ko: <ruby>10sionMAX<rt>텐션맥스</rt></ruby>!!!
   ko_rr:
   zh-TW:
   zh-CN:
@@ -24332,7 +24332,7 @@ name:
   pt:
   ja: <ruby>幻<rt>げん</rt></ruby><ruby>竜<rt>りゅう</rt></ruby><ruby>重<rt>じゅう</rt></ruby><ruby>騎<rt>き</rt></ruby>ウォーム<ruby>Ｅｘ<rt>エクス</rt></ruby>カベーター［<ruby>Ｌ<rt>エル</rt></ruby>］
   ja_romaji: Genryūjūki Wōmu Ekusu Kabētā [Eru]
-  ko: 환룡중기 웜 <rubyEx<rt>엑스</rt></ruby>커베이터[L]
+  ko: 환룡중기 웜 <ruby>Ex<rt>엑스</rt></ruby>커베이터[L]
   ko_rr:
   zh-TW:
   zh-CN:
@@ -24416,7 +24416,7 @@ name:
   pt:
   ja: <ruby>幻<rt>げん</rt></ruby><ruby>竜<rt>りゅう</rt></ruby><ruby>重<rt>じゅう</rt></ruby><ruby>騎<rt>き</rt></ruby>ウォーム<ruby>Ｅｘ<rt>エクス</rt></ruby>カベーター
   ja_romaji: Genryūjūki Wōmu Ekusu Kabētā
-  ko: 환룡중기 웜 <rubyEx<rt>엑스</rt></ruby>커베이터
+  ko: 환룡중기 웜 <ruby>Ex<rt>엑스</rt></ruby>커베이터
   ko_rr:
   zh-TW:
   zh-CN:
@@ -24519,7 +24519,7 @@ name:
   pt:
   ja: <ruby>幻<rt>げん</rt></ruby><ruby>竜<rt>りゅう</rt></ruby><ruby>重<rt>じゅう</rt></ruby><ruby>騎<rt>き</rt></ruby>ウォーム<ruby>Ｅｘ<rt>エクス</rt></ruby>カベーター［<ruby>Ｒ<rt>アール</rt></ruby>］
   ja_romaji: Genryūjūki Wōmu Ekusu Kabētā [Āru]
-  ko: 환룡중기 웜 <rubyEx<rt>엑스</rt></ruby>커베이터[R]
+  ko: 환룡중기 웜 <ruby>Ex<rt>엑스</rt></ruby>커베이터[R]
   ko_rr:
   zh-TW:
   zh-CN:
@@ -25427,7 +25427,7 @@ name:
   pt:
   ja: マグマッサー<ruby>Ｇ<rt>ジー</rt></ruby>
   ja_romaji: Magumassā Jī
-  ko: 마그마사<rubyG<rt>지</rt></ruby>
+  ko: 마그마사<ruby>G<rt>지</rt></ruby>
   ko_rr:
   zh-TW:
   zh-CN:
@@ -25662,7 +25662,7 @@ name:
   pt:
   ja: <ruby>ＴＣＢ<rt>タイプチェンジビーム</rt></ruby>
   ja_romaji: Taipu Chenji Bīmu
-  ko: <rubyTCB<rt>타입체인지빔</rt></ruby>
+  ko: <ruby>TCB<rt>타입체인지빔</rt></ruby>
   ko_rr:
   zh-TW:
   zh-CN:
@@ -28745,7 +28745,7 @@ name:
   pt:
   ja: <ruby>ＣＡＮ<rt>キャン</rt></ruby>：<ruby>Ｄ<rt>ディー</rt></ruby>
   ja_romaji: Kyan:Dī
-  ko: <rubyCAN<rt>캔</rt></ruby>:<rubyD<rt>디</rt></ruby>
+  ko: <ruby>CAN<rt>캔</rt></ruby>:<ruby>D<rt>디</rt></ruby>
   ko_rr:
   zh-TW:
   zh-CN:
@@ -29795,7 +29795,7 @@ name:
   pt:
   ja: <ruby>ＣＡＮ<rt>キャン</rt></ruby>－<ruby>Ｒｅ：Ｄ<rt>レディー</rt></ruby>
   ja_romaji: Kyan-Redī
-  ko: <rubyCAN<rt>캔</rt></ruby>－<rubyRe:D<rt>레이디</rt></ruby>
+  ko: <ruby>CAN<rt>캔</rt></ruby>－<ruby>Re:D<rt>레이디</rt></ruby>
   ko_rr:
   zh-TW:
   zh-CN:
@@ -31165,7 +31165,7 @@ name:
   pt:
   ja: <ruby>ＪＡＭ：Ｐ<rt>ジャンプ</rt></ruby>アップ！
   ja_romaji: Janpu Appu!
-  ko: <rubyJAM<rt>점</rt></ruby>:<rubyP<rt>프</rt></ruby> 업!
+  ko: <ruby>JAM<rt>점</rt></ruby>:<ruby>P<rt>프</rt></ruby> 업!
   ko_rr:
   zh-TW:
   zh-CN:
@@ -31235,7 +31235,7 @@ name:
   pt:
   ja: <ruby>ＪＡＭ：Ｐ<rt>ジャンプ</rt></ruby>スタート！
   ja_romaji: Janpu Sutāto!
-  ko: <rubyJAM<rt>점</rt></ruby>:<rubyP<rt>프</rt></ruby> 스타트!
+  ko: <ruby>JAM<rt>점</rt></ruby>:<ruby>P<rt>프</rt></ruby> 스타트!
   ko_rr:
   zh-TW:
   zh-CN:
@@ -37960,7 +37960,7 @@ name:
   pt:
   ja: <ruby>ＳＰ<rt>エスピー</rt></ruby>シャイン・ガード
   ja_romaji: Esu Pī Shain Gādo
-  ko: <rubySP<rt>에스피</rt></ruby> 샤인 가드
+  ko: <ruby>SP<rt>에스피</rt></ruby> 샤인 가드
   ko_rr:
   zh-TW:
   zh-CN:
@@ -39171,7 +39171,7 @@ name:
   pt:
   ja: <ruby>ＪＡＭ：Ｐ<rt>ジャンプ</rt></ruby>セット！
   ja_romaji: Janpu Setto!
-  ko: <rubyJAM<rt>점</rt></ruby>:<rubyP<rt>프</rt></ruby> 세트!
+  ko: <ruby>JAM<rt>점</rt></ruby>:<ruby>P<rt>프</rt></ruby> 세트!
   ko_rr:
   zh-TW:
   zh-CN:
@@ -39569,7 +39569,7 @@ name:
   pt:
   ja: <ruby>体<rt>たい</rt></ruby><ruby>力<rt>りょく</rt></ruby><ruby>増<rt>ぞう</rt></ruby><ruby>強<rt>きょう</rt></ruby><ruby>剤<rt>ざい</rt></ruby>ストロング<ruby>Ｚ<rt>ゼット</rt></ruby>
   ja_romaji: Tairyoku Zōkyōzai Sutorongu Zetto
-  ko: 체력증강제 스트롱<rubyZ<rt>제트</rt></ruby>
+  ko: 체력증강제 스트롱<ruby>Z<rt>제트</rt></ruby>
   ko_rr:
   zh-TW:
   zh-CN:
@@ -39704,7 +39704,7 @@ name:
   pt:
   ja: <ruby>Ｂ・Ｂ・Ｑ<rt>バーニング・ビースト・クオリティ</rt></ruby>
   ja_romaji: Bāningu Bīsuto Kuoriti
-  ko: <rubyB・B・Q<rt>버닝 비스트 퀄리티</rt></ruby>
+  ko: <ruby>B・B・Q<rt>버닝 비스트 퀄리티</rt></ruby>
   ko_rr:
   zh-TW:
   zh-CN:
@@ -40315,7 +40315,7 @@ name:
   pt:
   ja: <ruby>７<rt>セブン</rt></ruby>チャンス
   ja_romaji: Sebun Chansu
-  ko: <ruby7<rt>세븐</rt></ruby>찬스
+  ko: <ruby>7<rt>세븐</rt></ruby>찬스
   ko_rr:
   zh-TW:
   zh-CN:
@@ -44730,7 +44730,7 @@ name:
   pt:
   ja: ウィスパーク・<ruby>Ｆ<rt>フェアリー</rt></ruby>・ガール
   ja_romaji: Wisupāku Fearī Gāru
-  ko: 위스파크 <rubyF<rt>페어리</rt></ruby> 걸
+  ko: 위스파크 <ruby>F<rt>페어리</rt></ruby> 걸
   ko_rr:
   zh-TW:
   zh-CN:
@@ -44981,7 +44981,7 @@ name:
   pt:
   ja: <ruby>Ｍｒ．<rt>ミスター</rt></ruby>アルケ
   ja_romaji: Misutā Aruke
-  ko: <rubyMr.<rt>미스터</rt></ruby>알케
+  ko: <ruby>Mr.<rt>미스터</rt></ruby>알케
   ko_rr:
   zh-TW:
   zh-CN:
@@ -45101,7 +45101,7 @@ name:
   pt:
   ja: <ruby>超<rt>ちょう</rt></ruby><ruby>撃<rt>げき</rt></ruby><ruby>龍<rt>りゅう</rt></ruby>ドラギアスター<ruby>Ｆ<rt>エフ</rt></ruby>
   ja_romaji: Chōgekiryū Doragiasutā Efu
-  ko: 초격룡 드라기아스타<rubyF<rt>에프</rt></ruby>
+  ko: 초격룡 드라기아스타<ruby>F<rt>에프</rt></ruby>
   ko_rr:
   zh-TW:
   zh-CN:
@@ -45197,7 +45197,7 @@ name:
   pt:
   ja: <ruby>月<rt>がち</rt></ruby><ruby>輪<rt>りん</rt></ruby><ruby>龍<rt>りゅう</rt></ruby>アンブランサー<ruby>Ｆ<rt>エフ</rt></ruby>
   ja_romaji: Gachirinryū Anburansā Efu
-  ko: 월륜룡 엄브랜서<rubyF<rt>에프</rt></ruby>
+  ko: 월륜룡 엄브랜서<ruby>F<rt>에프</rt></ruby>
   ko_rr:
   zh-TW:
   zh-CN:
@@ -46369,7 +46369,7 @@ name:
   pt:
   ja: <ruby>漆<rt>しっ</rt></ruby><ruby>黒<rt>こく</rt></ruby>シャイン<ruby>王<rt>おう</rt></ruby><ruby>Ｇ<rt>グレート</rt></ruby>アークトーク
   ja_romaji: Shikkoku Shain Ō Gurēto Ākutōku
-  ko: 칠흑 샤인왕<rubyG<rt>그레이트</rt></ruby> 아크토크
+  ko: 칠흑 샤인왕<ruby>G<rt>그레이트</rt></ruby> 아크토크
   ko_rr:
   zh-TW:
   zh-CN:
@@ -46456,7 +46456,7 @@ name:
   pt:
   ja: <ruby>刷<rt>さっ</rt></ruby><ruby>新<rt>しん</rt></ruby><ruby>戦<rt>せん</rt></ruby><ruby>士<rt>し</rt></ruby>シャイン・<ruby>Ｏ<rt>オーガナイザー</rt></ruby>
   ja_romaji: Sasshinsenshi Shain Ōganaizā
-  ko: 쇄신전사 샤인 <rubyO<rt>오우거나이저</rt></ruby>
+  ko: 쇄신전사 샤인 <ruby>O<rt>오우거나이저</rt></ruby>
   ko_rr:
   zh-TW:
   zh-CN:
@@ -50394,7 +50394,7 @@ name:
   pt:
   ja: <ruby>ＣＡＮ<rt>キャン</rt></ruby>：<ruby>Ｄ<rt>ディー</rt></ruby> <ruby>ＬＩＶＥ<rt>ライブ</rt></ruby>
   ja_romaji: Kyan:Dī Raibu
-  ko: <rubyCAN<rt>캔</rt></ruby>:<rubyD<rt>디</rt></ruby> <rubyLIVE<rt>라이브</rt></ruby>
+  ko: <ruby>CAN<rt>캔</rt></ruby>:<ruby>D<rt>디</rt></ruby> <ruby>LIVE<rt>라이브</rt></ruby>
   ko_rr:
   zh-TW:
   zh-CN:
@@ -52218,7 +52218,7 @@ name:
   pt:
   ja: リクエスト<ruby>９<rt>ナイン</rt></ruby>
   ja_romaji: Rikuesuto Nain
-  ko: 리퀘스트<ruby9<rt>나인</rt></ruby>
+  ko: 리퀘스트<ruby>9<rt>나인</rt></ruby>
   ko_rr:
   zh-TW:
   zh-CN:
@@ -52965,7 +52965,7 @@ name:
   pt:
   ja: <ruby>ＣＡＮ<rt>キャン</rt></ruby>－<ruby>Ｍｅｌｏ：Ｄ<rt>メロディー</rt></ruby>
   ja_romaji: Kyan-Merodī
-  ko: <rubyCAN<rt>캔</rt></ruby>－<rubyMelo:D<rt>멜로디</rt></ruby>
+  ko: <ruby>CAN<rt>캔</rt></ruby>－<ruby>Melo:D<rt>멜로디</rt></ruby>
   ko_rr:
   zh-TW:
   zh-CN:
@@ -56462,7 +56462,7 @@ name:
   pt:
   ja: <ruby>Ｃ<rt>キャプテン</rt></ruby><ruby>背<rt>せ</rt></ruby><ruby>番<rt>ばん</rt></ruby><ruby>号<rt>ごう</rt></ruby>３９ <ruby>球<rt>きゅう</rt></ruby><ruby>児<rt>じ</rt></ruby><ruby>皇<rt>おう</rt></ruby>ホームプレート
   ja_romaji: Kyaputen Sebangō Sanjūkyū Kyūjiō Hōmupurēto
-  ko: <rubyC<rt>캡틴</rt></ruby>등번호39 구아황 홈플레이트
+  ko: <ruby>C<rt>캡틴</rt></ruby>등번호39 구아황 홈플레이트
   ko_rr:
   zh-TW:
   zh-CN:
@@ -57635,7 +57635,7 @@ name:
   pt:
   ja: <ruby>朧<rt>ろう</rt></ruby><ruby>撃<rt>げき</rt></ruby><ruby>龍<rt>りゅう</rt></ruby>ミラギアスター<ruby>Ｆ<rt>エフ</rt></ruby>
   ja_romaji: Rōgekiryū Miragiasutā Efu
-  ko: 농격룡 미라기아스타<rubyF<rt>에프</rt></ruby>
+  ko: 농격룡 미라기아스타<ruby>F<rt>에프</rt></ruby>
   ko_rr:
   zh-TW:
   zh-CN:
@@ -58582,7 +58582,7 @@ name:
   pt:
   ja: エーテル・<ruby>Ｆ<rt>ファスト</rt></ruby>・ストライカー
   ja_romaji: Ēteru Fasuto Sutoraikā
-  ko: 에테르 <rubyF<rt>패스트</rt></ruby> 스트라이커
+  ko: 에테르 <ruby>F<rt>패스트</rt></ruby> 스트라이커
   ko_rr:
   zh-TW:
   zh-CN:
@@ -58916,7 +58916,7 @@ name:
   pt:
   ja: <ruby>ＴＵＭ<rt>タッチアップマジック</rt></ruby>－サクリファイス・フォース
   ja_romaji: Tacchi Appu Majikku - Sakurifaisu Fōsu
-  ko: <rubyTUM<rt>터치 업 매직</rt></ruby>－새크리파이스 포스
+  ko: <ruby>TUM<rt>터치 업 매직</rt></ruby>－새크리파이스 포스
   ko_rr:
   zh-TW:
   zh-CN:
@@ -68184,7 +68184,7 @@ name:
   pt:
   ja: <ruby>剛<rt>ごう</rt></ruby><ruby>撃<rt>げき</rt></ruby><ruby>龍<rt>りゅう</rt></ruby>メタギアスター<ruby>Ｆ<rt>エフ</rt></ruby>
   ja_romaji: Gōgekiryū Metagiasutā Efu
-  ko: 광격룡 메타기아스타<rubyF<rt>에프</rt></ruby>
+  ko: 광격룡 메타기아스타<ruby>F<rt>에프</rt></ruby>
   ko_rr:
   zh-TW:
   zh-CN:
@@ -69056,7 +69056,7 @@ name:
   pt:
   ja: <ruby>ＣＡＮ<rt>キャン</rt></ruby>：<ruby>Ｄ<rt>ディー</rt></ruby> <ruby>ＡＬＬ<rt>オール</rt></ruby>
   ja_romaji: Kyan:Dī Ōru
-  ko: <rubyCAN<rt>캔</rt></ruby>:<rubyD<rt>디</rt></ruby> <rubyALL<rt>올</rt></ruby>
+  ko: <ruby>CAN<rt>캔</rt></ruby>:<ruby>D<rt>디</rt></ruby> <ruby>ALL<rt>올</rt></ruby>
   ko_rr:
   zh-TW:
   zh-CN:
@@ -69141,7 +69141,7 @@ name:
   pt:
   ja: <ruby>ＣＡＮ<rt>キャン</rt></ruby>－<ruby>Ｓｐ：Ｄ<rt>スピーディー</rt></ruby>
   ja_romaji: Kyan-Supīdī
-  ko: <rubyCAN<rt>캔</rt></ruby>－<rubySp:D<rt>스피디</rt></ruby>
+  ko: <ruby>CAN<rt>캔</rt></ruby>－<ruby>Sp:D<rt>스피디</rt></ruby>
   ko_rr:
   zh-TW:
   zh-CN:
@@ -69288,7 +69288,7 @@ name:
   pt:
   ja: <ruby>Ａ<rt>エー</rt></ruby><ruby>Ｉ<rt>アイ</rt></ruby>くまキャン
   ja_romaji: Ē Ai Kuma Kyan
-  ko: <rubyAI<rt>에이아이</rt></ruby> 쿠마캔
+  ko: <ruby>AI<rt>에이아이</rt></ruby> 쿠마캔
   ko_rr:
   zh-TW:
   zh-CN:
@@ -73239,7 +73239,7 @@ name:
   pt:
   ja: <ruby>三宮<rt>さんのみや</rt></ruby><ruby>金<rt>きん</rt></ruby><ruby>Ｇ<rt>ジー</rt></ruby>ロボⅢ<ruby>改<rt>かい</rt></ruby>
   ja_romaji: Sannomiya Kin Jī Robo Surī Kai
-  ko: 산노미야 킨<rubyG<rt>지</rt></ruby>로보Ⅲ개
+  ko: 산노미야 킨<ruby>G<rt>지</rt></ruby>로보Ⅲ개
   ko_rr:
   zh-TW:
   zh-CN:
@@ -75454,7 +75454,7 @@ name:
   pt:
   ja: <ruby>Ａ<rt>ア</rt></ruby>くま・リリス
   ja_romaji: Akuma Ririsu
-  ko: <rubyA<rt>아</rt></ruby>쿠마 릴리스
+  ko: <ruby>A<rt>아</rt></ruby>쿠마 릴리스
   ko_rr:
   zh-TW:
   zh-CN:
@@ -75538,7 +75538,7 @@ name:
   pt:
   ja: スプレンディッド・<ruby>Ｆ<rt>フロア</rt></ruby>マスター
   ja_romaji: Supurendiddo Furoa Masutā
-  ko: 스플렌디드 <rubyF<rt>플로어</rt></ruby>마스터
+  ko: 스플렌디드 <ruby>F<rt>플로어</rt></ruby>마스터
   ko_rr:
   zh-TW:
   zh-CN:
@@ -78658,7 +78658,7 @@ name:
   pt:
   ja: <ruby>β<rt>ベータ</rt></ruby>バーン・ドラゴン
   ja_romaji: Bēta Bān Doragon
-  ko: <rubyβ<rt>베타</rt></ruby>번 드래곤
+  ko: <ruby>β<rt>베타</rt></ruby>번 드래곤
   ko_rr:
   zh-TW:
   zh-CN:
@@ -78784,7 +78784,7 @@ name:
   pt:
   ja: <ruby>ＳＳＤ<rt>エスエスディー</rt></ruby>ドレイク
   ja_romaji: Esu Esu Dī Doreiku
-  ko: <rubySSD<rt>에스에스디</rt></ruby> 드레이크
+  ko: <ruby>SSD<rt>에스에스디</rt></ruby> 드레이크
   ko_rr:
   zh-TW:
   zh-CN:
@@ -78910,7 +78910,7 @@ name:
   pt:
   ja: <ruby>α<rt>アルファ</rt></ruby>バーン・ドレイク
   ja_romaji: Arufa Bān Doreiku
-  ko: <rubyα<rt>알파</rt></ruby>번 드레이크
+  ko: <ruby>α<rt>알파</rt></ruby>번 드레이크
   ko_rr:
   zh-TW:
   zh-CN:
@@ -79022,7 +79022,7 @@ name:
   pt:
   ja: <ruby>ＲＢ<rt>アールビー</rt></ruby>ドラフォン
   ja_romaji: Āru Bī Dorafon
-  ko: <rubyRB<rt>알비</rt></ruby> 드래폰
+  ko: <ruby>RB<rt>알비</rt></ruby> 드래폰
   ko_rr:
   zh-TW:
   zh-CN:
@@ -79589,7 +79589,7 @@ name:
   pt:
   ja: <ruby>ＳＰ<rt>スーパー</rt></ruby>アシスタント・アーチ
   ja_romaji: Sūpā Ashisutanto Āchi
-  ko: <rubySP<rt>슈퍼</rt></ruby> 어시스턴트 아치
+  ko: <ruby>SP<rt>슈퍼</rt></ruby> 어시스턴트 아치
   ko_rr:
   zh-TW:
   zh-CN:
@@ -81245,7 +81245,7 @@ name:
   pt:
   ja: アーツエンジェル・<ruby>Ｃ<rt>シー</rt></ruby><ruby>Ｄ<rt>ディー</rt></ruby>フェンダー
   ja_romaji: Ātsu Enjeru Shī Dī Fendā
-  ko: 아츠엔젤 <rubyCD<rt>씨디</rt></ruby>펜더
+  ko: 아츠엔젤 <ruby>CD<rt>씨디</rt></ruby>펜더
   ko_rr:
   zh-TW:
   zh-CN:
@@ -84668,7 +84668,7 @@ name:
   pt:
   ja: <ruby>ＪＡＭ：Ｐ<rt>ジャンプ</rt></ruby>チェック！
   ja_romaji: Janpu Chekku!
-  ko: <rubyJAM<rt>점</rt></ruby>:<rubyP<rt>프</rt></ruby> 체크!
+  ko: <ruby>JAM<rt>점</rt></ruby>:<ruby>P<rt>프</rt></ruby> 체크!
   ko_rr:
   zh-TW:
   zh-CN:
@@ -89029,7 +89029,7 @@ name:
   pt:
   ja: <ruby>Ｈ・Ｄ・Ｄ<rt>ハンドレッド・ディバイン・ドラゴン</rt></ruby>
   ja_romaji: Handoreddo Dibain Doragon
-  ko: <rubyH·D·D<rt>헌드레드 디바인 드래곤</rt></ruby>
+  ko: <ruby>H·D·D<rt>헌드레드 디바인 드래곤</rt></ruby>
   ko_rr:
   zh-TW:
   zh-CN:
@@ -89623,7 +89623,7 @@ name:
   pt:
   ja: <ruby>ＣＡＮ<rt>キャン</rt></ruby>－<ruby>Ｉ：Ｄ<rt>アイディー</rt></ruby>
   ja_romaji: Kyan-Aidī
-  ko: <rubyCAN<rt>캔</rt></ruby>－<rubyI:D<rt>아이디</rt></ruby>
+  ko: <ruby>CAN<rt>캔</rt></ruby>－<ruby>I:D<rt>아이디</rt></ruby>
   ko_rr:
   zh-TW:
   zh-CN:
@@ -89904,7 +89904,7 @@ name:
   pt:
   ja: アルマストラ<ruby>Ⅺ<rt>イレブン</rt></ruby>－アクエリアス
   ja_romaji: Arumasutora Irebun - Akueriasu
-  ko: 알마스트라<rubyⅪ<rt>일레븐</rt></ruby>－아쿠에리어스
+  ko: 알마스트라<ruby>Ⅺ<rt>일레븐</rt></ruby>－아쿠에리어스
   ko_rr:
   zh-TW:
   zh-CN:
@@ -100848,7 +100848,7 @@ name:
   pt:
   ja: <ruby>Ｂ・Ｂ・Ｂ<rt>ビースト・ブレイブ・ブランディッシュ</rt></ruby>
   ja_romaji: Bīsuto Bureibu Burandisshu
-  ko: <rubyB·B·B<rt>비스트 브레이브 브랜디시</rt></ruby>
+  ko: <ruby>B·B·B<rt>비스트 브레이브 브랜디시</rt></ruby>
   ko_rr:
   zh-TW:
   zh-CN:
@@ -102866,7 +102866,7 @@ name:
   pt:
   ja: <ruby>Ｄ<rt>ディー</rt></ruby><ruby>Ｂ<rt>ビー</rt></ruby><ruby>Ｆ<rt>エフ</rt></ruby>リビルドラ
   ja_romaji: Dī Bī Efu Ribirudora
-  ko: <rubyDBF<rt>디비에프</rt></ruby> 리빌드라
+  ko: <ruby>DBF<rt>디비에프</rt></ruby> 리빌드라
   ko_rr:
   zh-TW:
   zh-CN:
@@ -104765,7 +104765,7 @@ name:
   pt:
   ja: <ruby>ＥＸ<rt>エクストラ</rt></ruby>プローラー
   ja_romaji: Ekusutorapurōrā
-  ko: <rubyEX<rt>엑스트라</rt></ruby> 플로러
+  ko: <ruby>EX<rt>엑스트라</rt></ruby> 플로러
   ko_rr:
   zh-TW:
   zh-CN:
@@ -104976,7 +104976,7 @@ name:
   pt:
   ja: ギャラクティアラ・<ruby>Ｆ<rt>ヒューズ</rt></ruby>・イブ
   ja_romaji: Gyarakutiara Hyūzu Ivu
-  ko: 갤럭티아라 <rubyF<rt>퓨즈</rt></ruby> 이브
+  ko: 갤럭티아라 <ruby>F<rt>퓨즈</rt></ruby> 이브
   ko_rr:
   zh-TW:
   zh-CN:
@@ -105940,7 +105940,7 @@ name:
   pt:
   ja: <ruby>ＳＦ<rt>スペースフュージョン</rt></ruby>－<ruby>ＥＸ<rt>エクストラ</rt></ruby>プラズマー
   ja_romaji: Supēsu Fyūjon - Ekusutorapurazumā
-  ko: <rubySF<rt>스페이스퓨전</rt></ruby>－<rubyEX<rt>엑스트라</rt></ruby> 플라즈머
+  ko: <ruby>SF<rt>스페이스퓨전</rt></ruby>－<ruby>EX<rt>엑스트라</rt></ruby> 플라즈머
   ko_rr:
   zh-TW:
   zh-CN:
@@ -111942,7 +111942,7 @@ name:
   pt:
   ja: <ruby>ＨＰ<rt>ハイパー</rt></ruby>アシスタント・アーチ
   ja_romaji: Haipā Ashisutanto Āchi
-  ko: <rubyHP<rt>하이퍼</rt></ruby> 어시스턴트 아치
+  ko: <ruby>HP<rt>하이퍼</rt></ruby> 어시스턴트 아치
   ko_rr:
   zh-TW:
   zh-CN:
@@ -115327,7 +115327,7 @@ name:
   pt:
   ja: <ruby>秘<rt>ひ</rt></ruby><ruby>密<rt>みつ</rt></ruby><ruby>ＦＩＬＥ<rt>ファイル</rt></ruby>３３－<ruby>怨<rt>うら</rt></ruby>みの<ruby>散<rt>さん</rt></ruby><ruby>華<rt>げ</rt></ruby>
   ja_romaji: Himitsu Fairu Sanjūsan - Urami no Sange
-  ko: 비밀<rubyFILE<rt>파일</rt></ruby>33－앙심의 산화
+  ko: 비밀<ruby>FILE<rt>파일</rt></ruby>33－앙심의 산화
   ko_rr:
   zh-TW:
   zh-CN:
@@ -118989,7 +118989,7 @@ name:
   pt:
   ja: <ruby>7<rt>セブン</rt></ruby>シフト
   ja_romaji: Sebun Shifuto
-  ko: <ruby7<rt>세븐</rt></ruby>시프트
+  ko: <ruby>7<rt>세븐</rt></ruby>시프트
   ko_rr:
   zh-TW:
   zh-CN:
@@ -120179,7 +120179,7 @@ name:
   pt:
   ja: <ruby>Ｖｉ－ＦＲＮＤ<rt>ヴィーフレンド</rt></ruby>
   ja_romaji: Vī Furendo
-  ko: <rubyVi－FRND<rt>비－프렌드</rt></ruby>
+  ko: <ruby>Vi－FRND<rt>비－프렌드</rt></ruby>
   ko_rr:
   zh-TW:
   zh-CN:
