--- a/data/cards/02906250.yaml
+++ b/data/cards/02906250.yaml
@@ -59,7 +59,7 @@ sets:
     rarities:
     - Ultra Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 21466
 master_duel_rarity: N
