--- a/data/cards/44455560.yaml
+++ b/data/cards/44455560.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19825
 password: 44455560
 name:
   en: Fire King Consort Ulkanix
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した場合に発動できる。このカード以外の自分の手札・フィールド（表側表示）の炎属性モンスター１体を破壊し、「炎王妃 ウルカニクス」以外の獣族・獣戦士族・鳥獣族の炎属性モンスター１体をデッキから手札に加える。その後、このカードのレベルをこの効果で手札に加えたモンスターと同じにできる。②：このカードが破壊され墓地へ送られた場合に発動できる。デッキから「炎王神獣 ガルドニクス」１体を守備表示で特殊召喚する。
   ko:
   zh-TW:
   zh-CN:
@@ -44,7 +45,7 @@ sets:
     - Ultra Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   name:
     en: true
