--- a/data/rush/20048.yaml
+++ b/data/rush/20048.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 20048
 name:
   en: Voidvelgr God Requiem
   de:
@@ -20,7 +20,8 @@ summoning_condition:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードはモンスター３体をリリースして攻撃表示でアドバンス召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    上記の方法でこのカードを召喚したターンに、自分の墓地のモンスター５体をデッキに戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -44,7 +46,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドのレベルが一番高い表側表示モンスターを全て破壊する。その後、［相手フィールドの表側表示モンスターの攻撃力の合計］だけ相手にダメージを与える事ができる。
   ko:
   zh-TW:
   zh-CN:
