--- a/rush.yaml
+++ b/rush.yaml
@@ -134073,6 +134073,83 @@ is_translation_unofficial:
     en: true
 yugipedia_page_id: 1037157
 ---
+konami_id: 20048
+name:
+  en: Voidvelgr God Requiem
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ヴォイドヴェルグ・ゴッドレクイエム
+  ja_romaji: Voidoverugu Goddo Rekuiemu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    You can Tribute Summon this card in Attack Position by Tributing 3 monsters.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    このカードはモンスター３体をリリースして攻撃表示でアドバンス召喚できる。
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card the above way, shuffle 5 monsters from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    上記の方法でこのカードを召喚したターンに、自分の墓地のモンスター５体をデッキに戻して発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy all face-up monsters with the highest Level on your opponent's field. Then, you can inflict damage to your opponent equal to [the total ATK of the face-up monsters on their field].
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    相手フィールドのレベルが一番高い表側表示モンスターを全て破壊する。その後、［相手フィールドの表側表示モンスターの攻撃力の合計］だけ相手にダメージを与える事ができる。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Effect
+attribute: DARK
+level: 10
+atk: 2500
+def: 2000
+series:
+- Voidvelgr
+images:
+- index: 1
+  image: VoidvelgrGodRequiem-RDSJMP-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SJMP-JP037
+    set_name: Saikyō Jump April 2024 promotional card
+    rarities:
+    - Normal Parallel Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1041934
+---
 konami_id: 20050
 name:
   en: Kanan the Swordmistress
@@ -134546,80 +134623,6 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1033308
----
-konami_id:
-name:
-  en: Voidvelgr God Requiem
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: ヴォイドヴェルグ・ゴッドレクイエム
-  ja_romaji: Voidoverugu Goddo Rekuiemu
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-summoning_condition:
-  en: |-
-    You can Tribute Summon this card in Attack Position by Tributing 3 monsters.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-requirement:
-  en: |-
-    During the turn you Normal Summoned this card the above way, shuffle 5 monsters from your Graveyard into the Deck.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-effect:
-  en: |-
-    Destroy all face-up monsters with the highest Level on your opponent's field. Then, you can inflict damage to your opponent equal to [the total ATK of the face-up monsters on their field].
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Galaxy / Effect
-attribute: DARK
-level: 10
-atk: 2500
-def: 2000
-series:
-- Voidvelgr
-images:
-- index: 1
-  image: VoidvelgrGodRequiem-RDSJMP-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/SJMP-JP037
-    set_name: Saikyō Jump April 2024 promotional card
-    rarities:
-    - Normal Parallel Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
-yugipedia_page_id: 1041934
 ---
 konami_id:
 name:
