--- a/data/cards/30095833.yaml
+++ b/data/cards/30095833.yaml
@@ -37,7 +37,7 @@ text:
     レベル７がＰ召喚可能な場合にＥＸデッキの表側のこのカードはＰ召喚できる。このカードはＸ召喚されたターンにはＸ召喚の素材にできない。このカード名の①のモンスター効果は１ターンに１度しか使用できない。①：このカードのＸ素材を１つ取り除き、相手フィールドの攻撃力３０００以下のモンスターを２体まで対象として発動できる。そのモンスターを破壊する。②：モンスターゾーンのこのカードが破壊された場合に発動できる。このカードを自分のＰゾーンに置く。
   ko: |-
     레벨 7 의 펜듈럼 몬스터 × 2
-    레벨 7 이 펜듈럼 소환 가능한 경우에 엑스트라 덱의 앞면 표시의 이 카드는 펜듈럼 소환할 수 있다. 이 카드는 엑시즈 소환된 턴에는 엑시즈 소환의 소재로 할 수 없다. 이 카드명의 ①의 몬스터 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 엑시즈 소재를 1개 제거하고, 상대 필드의 공격력 3000 이하의 몬스터를 2장까지 대상으로 하여 발동할 수 있다. 그 몬스터를 파괴한다. ②: 몬스터 존의 이 카드가 파괴되었을 경우에 발동할 수 있다. 이 카드를 자신의 펜듈럼 존에 놓는다.
+    레벨 7 이 펜듈럼 소환 가능한 경우에 엑스트라 덱의 앞면의 이 카드는 펜듈럼 소환할 수 있다. 이 카드는 엑시즈 소환된 턴에는 엑시즈 소환의 소재로 할 수 없다. 이 카드명의 ①의 몬스터 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 엑시즈 소재를 1개 제거하고, 상대 필드의 공격력 3000 이하의 몬스터를 2장까지 대상으로 하여 발동할 수 있다. 그 몬스터를 파괴한다. ②: 몬스터 존의 이 카드가 파괴되었을 경우에 발동할 수 있다. 이 카드를 자신의 펜듈럼 존에 놓는다.
   zh-TW: |-
     等級７的鐘擺怪獸×２
     在可進行等級７的鐘擺召喚的狀況下，可鐘擺召喚額外牌組的正面表示的此卡。此卡在被超量召喚的回合無法做為超量召喚的素材。此卡名的①怪獸效果，１回合僅限使用１次。①：可去除此卡的１個超量素材，將對方場上最多２隻攻擊力３０００以下的怪獸做為對象發動。破壞該怪獸。②：可在怪獸區的此卡被破壞的狀況下發動。將此卡置於我方的鐘擺區。
@@ -67,7 +67,7 @@ pendulum_effect:
   ja: |-
     このカード名のＰ効果は１ターンに１度しか使用できない。①：自分メインフェイズに発動できる。このカードを特殊召喚する。その後、自分の墓地から闇属性モンスター１体をこのカードのＸ素材にできる。
   ko: |-
-    이 카드명의 펜듈럼 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 메인 페이즈에 발동할 수 있다. 이 카드를 특수 소환한다. 그 후, 자신 묘지에서 어둠 속성 몬스터 1장을 고르고 이 카드 아래에 겹쳐 엑시즈 소재로 할 수 있다.
+    이 카드명의 펜듈럼 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 메인 페이즈에 발동할 수 있다. 이 카드를 특수 소환한다. 그 후, 자신 묘지에서 어둠 속성 몬스터 1장을 이 카드의 엑시즈 소재로 할 수 있다.
   zh-TW: |-
     此卡名的鐘擺效果，１回合僅限使用１次。①：可在我方主要階段發動。特殊召喚此卡。其後，可從我方墓地選擇１隻闇屬性怪獸，重疊至此卡下方做為超量素材。
   zh-CN: |-
