--- a/data/cards/02333466.yaml
+++ b/data/cards/02333466.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Gains 300 ATK for each banished card. You can only use each of the following effects of "Geas Gandora the Dragon of Destruction" once per turn. If you control "Gold Sarcophagus of Light": You can Special Summon this card from your hand. You can pay half your LP; destroy as many other cards on the field as possible, and if you do, banish them, then Special Summon 1 Level 7 or lower monster from your Deck that mentions "Gold Sarcophagus of Light", and if you do, increase its Level by the number of cards destroyed by this effect.
+    Gains 300 ATK for each banished card. You can only use each of the following effects of "Geas Gandora the Dragon of Destruction" once per turn. If you control "Shining Sarcophagus": You can Special Summon this card from your hand. You can pay half your LP; destroy as many other cards on the field as possible, and if you do, banish them, then Special Summon 1 Level 7 or lower monster from your Deck that mentions "Shining Sarcophagus", and if you do, increase its Level by the number of cards destroyed by this effect.
   de:
   es:
   fr:
@@ -34,7 +34,7 @@ atk: 0
 def: 0
 series:
 - Gandora
-- Gold Sarcophagus of Light
+- Shining Sarcophagus
 images:
 - index: 1
   image: GeasGandoratheDragonofDestruction-LEDE-JP-UR.png
