--- a/data/cards/39321065.yaml
+++ b/data/cards/39321065.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Once per turn, during the Standby Phase: Increase this card's Level by 1. While this card's current Level is higher than its original Level, it gains ATK equal to the difference x 500. When your opponent activates a card or effect that targets "Gold Sarcophagus of Light", and/or a monster(s) that mentions it, you control (Quick Effect): You can negate the activation, and if you do, increase this card's Level by 1. You can only use this effect of "Silent Swordsman Zero" once per turn.
+    Once per turn, during the Standby Phase: Increase this card's Level by 1. While this card's current Level is higher than its original Level, it gains ATK equal to the difference x 500. When your opponent activates a card or effect that targets "Shining Sarcophagus", and/or a monster(s) that mentions it, you control (Quick Effect): You can negate the activation, and if you do, increase this card's Level by 1. You can only use this effect of "Silent Swordsman Zero" once per turn.
   de:
   es:
   fr:
@@ -34,7 +34,7 @@ atk: 1000
 def: 1000
 series:
 - Silent Swordsman
-- Gold Sarcophagus of Light
+- Shining Sarcophagus
 images:
 - index: 1
   image: SilentSwordsmanZero-LEDE-JP-C.png
