--- a/data/cards/yugipedia1042409.yaml
+++ b/data/cards/yugipedia1042409.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    This card's name becomes "Dark Magician" while in the Monster Zone. You can only use each of the following effects of "Dark Magician the Ebon Sorcerer" once per turn. If "Gold Sarcophagus of Light" is on the field: You can Special Summon this card from your hand. If this card is destroyed by card effect and a Level 5 or higher monster is on the field: You can Special Summon this card, then you can Set 1 Spell/Trap that mentions "Dark Magician" directly from your Deck.
+    This card's name becomes "Dark Magician" while in the Monster Zone. You can only use each of the following effects of "Dark Magician the Ebon Sorcerer" once per turn. If "Shining Sarcophagus" is on the field: You can Special Summon this card from your hand. If this card is destroyed by card effect and a Level 5 or higher monster is on the field: You can Special Summon this card, then you can Set 1 Spell/Trap that mentions "Dark Magician" directly from your Deck.
   de:
   es:
   fr:
@@ -33,7 +33,7 @@ atk: 2500
 def: 2100
 series:
 - Dark Magician
-- Gold Sarcophagus of Light
+- Shining Sarcophagus
 - Magician
 images:
 - index: 1
