--- a/data/cards/yugipedia1042410.yaml
+++ b/data/cards/yugipedia1042410.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    When an opponent's monster declares an attack, or an opponent's monster effect is activated that would destroy a monster(s) on the field, and a monster that mentions "Gold Sarcophagus of Light" is on the field: The first time each monster you control that mentions "Gold Sarcophagus of Light" would be destroyed by battle or card effect for the rest of this turn after this card resolves, it is not destroyed, also destroy as many opponent's Attack Position monsters as possible, then, if you control "Dark Magician", inflict 500 damage to them for each monster destroyed.
+    When an opponent's monster declares an attack, or an opponent's monster effect is activated that would destroy a monster(s) on the field, and a monster that mentions "Shining Sarcophagus" is on the field: The first time each monster you control that mentions "Shining Sarcophagus" would be destroyed by battle or card effect for the rest of this turn after this card resolves, it is not destroyed, also destroy as many opponent's Attack Position monsters as possible, then, if you control "Dark Magician", inflict 500 damage to them for each monster destroyed.
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ text:
 card_type: Trap
 property: Normal
 series:
-- Gold Sarcophagus of Light
+- Shining Sarcophagus
 - Mirror Trap
 images:
 - index: 1
