--- a/data/cards/05786513.yaml
+++ b/data/cards/05786513.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Target 1 face-up monster you control; increase its Level by 3, also if you activated this card in response to your opponent's monster effect activation while you controlled "Gold Sarcophagus of Light" and a monster that mentions it, negate that opponent's effect. During damage calculation, if your monster that mentions "Gold Sarcophagus of Light" battles: You can banish this card from your GY; end the Battle Phase. You can only activate 1 "Turn Silence" per turn.
+    Target 1 face-up monster you control; increase its Level by 3, also if you activated this card in response to your opponent's monster effect activation while you controlled "Shining Sarcophagus" and a monster that mentions it, negate that opponent's effect. During damage calculation, if your monster that mentions "Shining Sarcophagus" battles: You can banish this card from your GY; end the Battle Phase. You can only activate 1 "Turn Silence" per turn.
   de:
   es:
   fr:
@@ -29,7 +29,7 @@ text:
 card_type: Spell
 property: Quick-Play
 series:
-- Gold Sarcophagus of Light
+- Shining Sarcophagus
 images:
 - index: 1
   image: TurnSilence-LEDE-JP-C.png
