--- a/data/cards/32270212.yaml
+++ b/data/cards/32270212.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If you control "Gold Sarcophagus of Light" and a monster that mentions it: Special Summon up to 2 Level 4 or lower monsters with different names from your hand and/or Deck that mention "Gold Sarcophagus of Light", also you cannot Special Summon monsters from the Extra Deck for the rest of this turn after this card resolves. You can only activate 1 "Ties of Friendship" per turn.
+    If you control "Shining Sarcophagus" and a monster that mentions it: Special Summon up to 2 Level 4 or lower monsters with different names from your hand and/or Deck that mention "Shining Sarcophagus", also you cannot Special Summon monsters from the Extra Deck for the rest of this turn after this card resolves. You can only activate 1 "Ties of Friendship" per turn.
   de:
   es:
   fr:
@@ -29,7 +29,7 @@ text:
 card_type: Spell
 property: Normal
 series:
-- Gold Sarcophagus of Light
+- Shining Sarcophagus
 images:
 - index: 1
   image: TiesofFriendship-LEDE-JP-R.png
