--- a/data/cards/38505587.yaml
+++ b/data/cards/38505587.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    While you control "Gold Sarcophagus of Light", this card cannot be destroyed by battle, also your opponent's monsters cannot target other monsters for attacks. You can only use each of the following effects of "Mashimarshmallon" once per turn. During your opponent's turn, if you control "Gold Sarcophagus of Light" (Quick Effect): You can Special Summon this card from your hand. If this card is destroyed by card effect: You can Special Summon 1 "Mashimarshmallon" from your hand, Deck, GY, or banishment, and if you do, inflict 1000 damage to your opponent.
+    While you control "Shining Sarcophagus", this card cannot be destroyed by battle, also your opponent's monsters cannot target other monsters for attacks. You can only use each of the following effects of "Mashimarshmallon" once per turn. During your opponent's turn, if you control "Shining Sarcophagus" (Quick Effect): You can Special Summon this card from your hand. If this card is destroyed by card effect: You can Special Summon 1 "Mashimarshmallon" from your hand, Deck, GY, or banishment, and if you do, inflict 1000 damage to your opponent.
   de:
   es:
   fr:
@@ -33,7 +33,7 @@ level: 3
 atk: 300
 def: 500
 series:
-- Gold Sarcophagus of Light
+- Shining Sarcophagus
 images:
 - index: 1
   image: Mashimarshmallon-LEDE-JP-C.png
