--- a/data/cards/78679226.yaml
+++ b/data/cards/78679226.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Add 1 monster from your Deck to your hand that mentions "Gold Sarcophagus of Light", then, if you activated this card during the Battle Phase while you controlled "Gold Sarcophagus of Light" and a monster that mentions it, each player draws cards until they have 6 cards in their hand. You can only activate 1 "Silence Towards the Future" per turn.
+    Add 1 monster from your Deck to your hand that mentions "Shining Sarcophagus", then, if you activated this card during the Battle Phase while you controlled "Shining Sarcophagus" and a monster that mentions it, each player draws cards until they have 6 cards in their hand. You can only activate 1 "Silence Towards the Future" per turn.
   de:
   es:
   fr:
@@ -29,7 +29,7 @@ text:
 card_type: Spell
 property: Quick-Play
 series:
-- Gold Sarcophagus of Light
+- Shining Sarcophagus
 images:
 - index: 1
   image: SilenceTowardstheFuture-LEDE-JP-R.png
