--- a/data/cards/92110878.yaml
+++ b/data/cards/92110878.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can add 1 "Gold Sarcophagus of Light", or 1 Spell/Trap that mentions it, from your Deck to your hand. If this card is destroyed by battle or card effect: You can Set 1 "Stronghold the Hidden Fortress" directly from your Deck. You can only use each effect of "Tricolore Gadget" once per turn.
+    If this card is Normal or Special Summoned: You can add 1 "Shining Sarcophagus", or 1 Spell/Trap that mentions it, from your Deck to your hand. If this card is destroyed by battle or card effect: You can Set 1 "Stronghold the Hidden Fortress" directly from your Deck. You can only use each effect of "Tricolore Gadget" once per turn.
   de:
   es:
   fr:
@@ -34,7 +34,7 @@ atk: 1300
 def: 1100
 series:
 - Gadget
-- Gold Sarcophagus of Light
+- Shining Sarcophagus
 images:
 - index: 1
   image: TricoloreGadget-LEDE-JP-R.png
