--- a/data/rush/yugipedia1043812.yaml
+++ b/data/rush/yugipedia1043812.yaml
@@ -49,6 +49,7 @@ sets:
     set_name: Over Rush Pack 2
     rarities:
     - Super Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
