--- a/data/cards/31764700.yaml
+++ b/data/cards/31764700.yaml
@@ -125,6 +125,13 @@ sets:
     set_name: Duelist Edition Volume 2
     rarities:
     - Common
+  - set_number: QCCU-JP126
+    set_name: Quarter Century Chronicle side:Unity
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Ultimate Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: PTDN-KR008
     set_name: Phantom Darkness
