--- a/rush.yaml
+++ b/rush.yaml
@@ -137352,3 +137352,48 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1046308
+---
+konami_id:
+name:
+  en: Labyrinth Wall
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    These walls form a labyrinth with no exit for enemies.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    フィールドに壁を出現させ、出口のない迷宮をつくる。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Rock / Normal
+attribute: EARTH
+level: 5
+atk: 0
+def: 3000
+legend: true
+images:
+- index: 1
+  image: LabyrinthWall-RDORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP080
+    set_name: Over Rush Pack 2
+    rarities:
+    - Common
+yugipedia_page_id: 1046730
