--- a/data/cards/67284908.yaml
+++ b/data/cards/67284908.yaml
@@ -8,9 +8,9 @@ name:
   it: Mura Labirintiche
   pt: Paredes do Labirinto
   ja: <ruby>迷<rt>めい</rt></ruby><ruby>宮<rt>きゅう</rt></ruby><ruby>壁<rt>へき</rt></ruby>－ラビリンス・ウォール－
-  ja_romaji: Meikyū Heki - Rabirinsu Wōru
+  ja_romaji: Meikyūheki -Rabirinsu Wōru-
   ko: 미궁출현－래버린스 월－
-  ko_rr: Migungchulhyeon - Raebeorinseu Wol
+  ko_rr: Migungchulhyeon -Raebeorinseu Wol-
   zh-TW:
   zh-CN: 迷宫壁
 text:
