--- a/data/cards/yugipedia1042409.yaml
+++ b/data/cards/yugipedia1042409.yaml
@@ -41,7 +41,7 @@ images:
 sets:
   ja:
   - set_number: INFO-JP006
-    set_name: Infinite Forbidden
+    set_name: The Infinite Forbidden
     rarities:
     - Ultra Rare
     - Ultimate Rare
