--- a/data/cards/yugipedia1042427.yaml
+++ b/data/cards/yugipedia1042427.yaml
@@ -43,7 +43,7 @@ images:
 sets:
   ja:
   - set_number: INFO-JP033
-    set_name: Infinite Forbidden
+    set_name: The Infinite Forbidden
     rarities:
     - Ultra Rare
     - Ultimate Rare
