--- a/data/cards/yugipedia1042442.yaml
+++ b/data/cards/yugipedia1042442.yaml
@@ -40,7 +40,7 @@ images:
 sets:
   ja:
   - set_number: INFO-JP004
-    set_name: Infinite Forbidden
+    set_name: The Infinite Forbidden
     rarities:
     - Rare
 limit_regulation:
