--- a/data/cards/yugipedia1042463.yaml
+++ b/data/cards/yugipedia1042463.yaml
@@ -42,7 +42,7 @@ images:
 sets:
   ja:
   - set_number: INFO-JP068
-    set_name: Infinite Forbidden
+    set_name: The Infinite Forbidden
     rarities:
 limit_regulation:
   tcg: Not yet released
