--- a/data/cards/yugipedia1042408.yaml
+++ b/data/cards/yugipedia1042408.yaml
@@ -37,42 +37,42 @@ images:
 sets:
   en:
   - set_number: INFO-EN000
-    set_name: Infinite Forbidden
+    set_name: The Infinite Forbidden
     rarities:
     - Quarter Century Secret Rare
   de:
   - set_number: INFO-DE000
-    set_name: Infinite Forbidden
+    set_name: The Infinite Forbidden
     rarities:
     - Quarter Century Secret Rare
   fr:
   - set_number: INFO-FR000
-    set_name: Infinite Forbidden
+    set_name: The Infinite Forbidden
     rarities:
     - Quarter Century Secret Rare
   it:
   - set_number: INFO-IT000
-    set_name: Infinite Forbidden
+    set_name: The Infinite Forbidden
     rarities:
     - Quarter Century Secret Rare
   pt:
   - set_number: INFO-PT000
-    set_name: Infinite Forbidden
+    set_name: The Infinite Forbidden
     rarities:
     - Quarter Century Secret Rare
   ja:
   - set_number: INFO-JP000
-    set_name: Infinite Forbidden
+    set_name: The Infinite Forbidden
     rarities:
     - Quarter Century Secret Rare
   ko:
   - set_number: INFO-KR000
-    set_name: Infinite Forbidden
+    set_name: The Infinite Forbidden
     rarities:
     - Quarter Century Secret Rare
   zh-CN:
   - set_number: INFO-SC000
-    set_name: Infinite Forbidden
+    set_name: The Infinite Forbidden
     rarities:
     - Quarter Century Secret Rare
 limit_regulation:
