--- a/data/cards/yugipedia1042431.yaml
+++ b/data/cards/yugipedia1042431.yaml
@@ -7,7 +7,7 @@ name:
   fr:
   it:
   pt:
-  ja: <ruby>千<rt>せん</rt></ruby><ruby>年<rt>ねん</rt></ruby>の<ruby>眠<rt>ね</rt></ruby>りから<ruby>覚<rt>さ</rt></ruby>めし<ruby>原<rt>げん</rt></ruby><ruby>人<rt>じん</rt></ruby>
+  ja: <ruby>千<rt>せん</rt></ruby><ruby>年<rt>ねん</rt></ruby>の<ruby>眠<rt>ねむ</rt></ruby>りから<ruby>覚<rt>さ</rt></ruby>めし<ruby>原<rt>げん</rt></ruby><ruby>人<rt>じん</rt></ruby>
   ja_romaji: Sennen no Nemuri kara Sameshi Genjin
   ko:
   ko_rr:
@@ -40,7 +40,7 @@ images:
 sets:
   ja:
   - set_number: INFO-JP001
-    set_name: Infinite Forbidden
+    set_name: The Infinite Forbidden
     rarities:
 limit_regulation:
   tcg: Not yet released
