--- a/data/cards/yugipedia1042445.yaml
+++ b/data/cards/yugipedia1042445.yaml
@@ -40,7 +40,7 @@ images:
 sets:
   ja:
   - set_number: INFO-JP005
-    set_name: Infinite Forbidden
+    set_name: The Infinite Forbidden
     rarities:
 limit_regulation:
   tcg: Not yet released
