--- a/data/cards/yugipedia1042451.yaml
+++ b/data/cards/yugipedia1042451.yaml
@@ -34,7 +34,7 @@ images:
 sets:
   ja:
   - set_number: INFO-JP054
-    set_name: Infinite Forbidden
+    set_name: The Infinite Forbidden
     rarities:
 limit_regulation:
   tcg: Not yet released
