--- a/data/cards/yugipedia1042468.yaml
+++ b/data/cards/yugipedia1042468.yaml
@@ -36,7 +36,7 @@ images:
 sets:
   ja:
   - set_number: INFO-JP053
-    set_name: Infinite Forbidden
+    set_name: The Infinite Forbidden
     rarities:
 limit_regulation:
   tcg: Not yet released
