--- a/data/cards/89494469.yaml
+++ b/data/cards/89494469.yaml
@@ -9,7 +9,7 @@ name:
   pt: Titã Negro do Terror
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>魔<rt>ま</rt></ruby><ruby>神<rt>じん</rt></ruby> ナイトメア
   ja_romaji: Ankoku Majin Naitomea
-  ko: 악몽의 악흑 마신
+  ko: 악몽의 암흑 마신
   ko_rr:
   zh-TW:
   zh-CN: 暗黑魔神 梦魇
