--- a/data/cards/89631139.yaml
+++ b/data/cards/89631139.yaml
@@ -71,6 +71,8 @@ images:
 - index: 9
   image: BlueEyesWhiteDragon-MP22-EN-PScR-1E.png
   illustration: BlueEyesWhiteDragon-OW-4.png
+- index: 10
+  image: BlueEyesWhiteDragon-TD02-JP-QCScR.png
 sets:
   en:
   - set_number: SKE-001
