--- a/data/cards/14057297.yaml
+++ b/data/cards/14057297.yaml
@@ -9,7 +9,7 @@ name:
   pt: Destruição Múltipla
   ja: <ruby>死<rt>し</rt></ruby>なばもろとも
   ja_romaji: Shinaba Morotomo
-  ko: 죽는다면 다 같이
+  ko: 최후라면 함께
   ko_rr:
   zh-TW:
   zh-CN: 同归于尽
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：お互いの手札がそれぞれ３枚以上の場合に発動できる。お互いのプレイヤーは、それぞれ手札を全て好きな順番でデッキの下に戻し、自分はこの効果でお互いがデッキに戻したカードの数×３００ＬＰを失う。その後、お互いのプレイヤーは、それぞれデッキから５枚ドローする。
   ko: |-
-    "죽는다면 다 같이"는 1턴에 1장밖에 발동할 수 없다. ①: 서로의 패가 3장 이상의 경우에 발동할 수 있다. 서로 패를 전부 좋아하는 순서대로 덱의 아래로 되돌리고, 자신은 이 효과로 서로 덱으로 되돌린 카드의 수 × 300 LP 를 상실한다. 그 후, 서로 덱에서 5장 드로우한다.
+    "최후라면 함께"는 1턴에 1장밖에 발동할 수 없다. ①: 서로의 패가 3장 이상의 경우에 발동할 수 있다. 서로 패를 전부 좋아하는 순서대로 덱의 아래로 되돌리고, 자신은 이 효과로 서로 덱으로 되돌린 카드의 수 × 300 LP를 상실한다. 그 후, 서로 덱에서 5장 드로우한다.
   zh-TW: |-
     此卡名的卡１回合僅限發動１張。①：可在雙方手牌各自為３張以上的狀況下發動。雙方玩家各自將所有手牌依喜好順序送回牌組下方，我方失去雙方因此效果送回牌組的卡的數量×３００LP。其後，雙方玩家各從牌組抽５張牌。
   zh-CN: |-
