--- a/data/cards/19980975.yaml
+++ b/data/cards/19980975.yaml
@@ -9,7 +9,7 @@ name:
   pt: Ciclone de Poeira de Diamante
   ja: ダイヤモンドダスト・サイクロン
   ja_romaji: Daiyamondo Dasuto Saikuron
-  ko: 다이아몬드더스트 싸이크론
+  ko: 다이아몬드더스트 싸이클론
   ko_rr:
   zh-TW:
   zh-CN: 钻尘旋风
