--- a/data/rush/15909.yaml
+++ b/data/rush/15909.yaml
@@ -69,6 +69,11 @@ sets:
     set_name: Strongest Battle Deck Nail - Maximum Haven
     rarities:
     - Common
+  - set_number: RD/B241-JP007
+    set_name: Battle Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/MAX1-KR015
     set_name: Maximum Ultra Enhancement Pack
