--- a/data/rush/16594.yaml
+++ b/data/rush/16594.yaml
@@ -57,6 +57,11 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Common
+  - set_number: RD/B241-JP004
+    set_name: Battle Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/MAX2-KR026
     set_name: Maximum Ultra Evolution Pack
