--- a/data/rush/17684.yaml
+++ b/data/rush/17684.yaml
@@ -43,6 +43,11 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Common
+  - set_number: RD/B241-JP002
+    set_name: Battle Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/MRP1-KR042
     set_name: Megaroad Pack
