--- a/data/rush/15159.yaml
+++ b/data/rush/15159.yaml
@@ -41,6 +41,9 @@ series:
 images:
 - index: 1
   image: StrayngeCat-RDMRP2-JP-C.png
+  illustration: StrayngeCat-DBR-JP-VG-artwork.png
+- index: 2
+  image: StrayngeCat-RDS241-JP-OP.png
 sets:
   ja:
   - set_number: RD/ST01-JP010
@@ -55,6 +58,10 @@ sets:
     set_name: Megaroad Pack 2
     rarities:
     - Common
+  - set_number: RD/S241-JP001
+    set_name: Special Victory Pack 2024 Vol.1
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: RD/ST01-KR010
     set_name: Starter Deck Yuga - Cut Through! Sevens Road!!
