--- a/data/rush/15190.yaml
+++ b/data/rush/15190.yaml
@@ -57,6 +57,9 @@ def: 0
 images:
 - index: 1
   image: DragonicSlayer-RDMRP2-JP-C.png
+  illustration: DragonicSlayer-DBR-JP-VG-artwork.png
+- index: 2
+  image: DragonicSlayer-RDS241-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP01-JP026
@@ -71,6 +74,10 @@ sets:
     set_name: Megaroad Pack 2
     rarities:
     - Common
+  - set_number: RD/S241-JP004
+    set_name: Special Victory Pack 2024 Vol.1
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: RD/KP01-KR026
     set_name: 'Deck Mod Pack: Hyperspeed Rush Road!!'
