--- a/data/rush/15682.yaml
+++ b/data/rush/15682.yaml
@@ -51,6 +51,11 @@ sets:
     set_name: Strongest Battle Deck Romin - Psychic Beat
     rarities:
     - Common
+  - set_number: RD/B241-JP003
+    set_name: Battle Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/CP01-KR034
     set_name: Character Pack - Gavin/Roa/Romin
