--- a/data/rush/18583.yaml
+++ b/data/rush/18583.yaml
@@ -37,12 +37,18 @@ series:
 images:
 - index: 1
   image: Chromatographagas-RDKP12-JP-R.png
+- index: 2
+  image: Chromatographagas-RDS241-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP12-JP001
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Rare
+  - set_number: RD/S241-JP002
+    set_name: Special Victory Pack 2024 Vol.1
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: RD/KP12-KR001
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
