--- a/data/rush/18696.yaml
+++ b/data/rush/18696.yaml
@@ -58,6 +58,12 @@ sets:
     set_name: Legend Awakening Pack
     rarities:
     - Rare
+  - set_number: RD/B241-JP001
+    set_name: Battle Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Super Rare
+    - Ultra Rare
   ko:
   - set_number: RD/LGP1-KR019
     set_name: Legend Awakening Pack
