--- a/data/rush/18933.yaml
+++ b/data/rush/18933.yaml
@@ -57,6 +57,11 @@ sets:
     set_name: Oblivion of the Flash
     rarities:
     - Rare
+  - set_number: RD/B241-JP006
+    set_name: Battle Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/KP13-KR004
     set_name: Oblivion of the Flash
