--- a/data/rush/19311.yaml
+++ b/data/rush/19311.yaml
@@ -49,12 +49,18 @@ def: 1000
 images:
 - index: 1
   image: NegatworDragon-RDKP14-JP-C.png
+- index: 2
+  image: NegatworDragon-RDS241-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP14-JP034
     set_name: Phoenix of the Roaring Flame
     rarities:
     - Common
+  - set_number: RD/S241-JP003
+    set_name: Special Victory Pack 2024 Vol.1
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: RD/KP14-KR034
     set_name: Phoenix of the Roaring Flame
