--- a/data/rush/19322.yaml
+++ b/data/rush/19322.yaml
@@ -72,6 +72,11 @@ sets:
     set_name: Phoenix of the Roaring Flame
     rarities:
     - Rare
+  - set_number: RD/B241-JP011
+    set_name: Battle Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/KP14-KR045
     set_name: Phoenix of the Roaring Flame
