--- a/data/rush/19334.yaml
+++ b/data/rush/19334.yaml
@@ -45,6 +45,8 @@ property: Normal
 images:
 - index: 1
   image: LegendStrike-RDKP14-JP-UR.png
+- index: 2
+  image: LegendStrike-RDS241-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP14-JP057
@@ -53,6 +55,10 @@ sets:
     - Ultra Rare
     - Secret Rare
     - Over Rush Rare
+  - set_number: RD/S241-JP005
+    set_name: Special Victory Pack 2024 Vol.1
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: RD/KP14-KR057
     set_name: Phoenix of the Roaring Flame
