--- a/data/rush/19343.yaml
+++ b/data/rush/19343.yaml
@@ -51,6 +51,11 @@ sets:
     set_name: Phoenix of the Roaring Flame
     rarities:
     - Rare
+  - set_number: RD/B241-JP012
+    set_name: Battle Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/KP14-KR066
     set_name: Phoenix of the Roaring Flame
