--- a/rush.yaml
+++ b/rush.yaml
@@ -732,6 +732,9 @@ series:
 images:
 - index: 1
   image: StrayngeCat-RDMRP2-JP-C.png
+  illustration: StrayngeCat-DBR-JP-VG-artwork.png
+- index: 2
+  image: StrayngeCat-RDS241-JP-OP.png
 sets:
   ja:
   - set_number: RD/ST01-JP010
@@ -746,6 +749,10 @@ sets:
     set_name: Megaroad Pack 2
     rarities:
     - Common
+  - set_number: RD/S241-JP001
+    set_name: Special Victory Pack 2024 Vol.1
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: RD/ST01-KR010
     set_name: Starter Deck Yuga - Cut Through! Sevens Road!!
@@ -2928,6 +2935,9 @@ def: 0
 images:
 - index: 1
   image: DragonicSlayer-RDMRP2-JP-C.png
+  illustration: DragonicSlayer-DBR-JP-VG-artwork.png
+- index: 2
+  image: DragonicSlayer-RDS241-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP01-JP026
@@ -2942,6 +2952,10 @@ sets:
     set_name: Megaroad Pack 2
     rarities:
     - Common
+  - set_number: RD/S241-JP004
+    set_name: Special Victory Pack 2024 Vol.1
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: RD/KP01-KR026
     set_name: 'Deck Mod Pack: Hyperspeed Rush Road!!'
@@ -14492,6 +14506,11 @@ sets:
     set_name: Strongest Battle Deck Romin - Psychic Beat
     rarities:
     - Common
+  - set_number: RD/B241-JP003
+    set_name: Battle Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/CP01-KR034
     set_name: Character Pack - Gavin/Roa/Romin
@@ -19631,6 +19650,11 @@ sets:
     set_name: Strongest Battle Deck Nail - Maximum Haven
     rarities:
     - Common
+  - set_number: RD/B241-JP007
+    set_name: Battle Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/MAX1-KR015
     set_name: Maximum Ultra Enhancement Pack
@@ -35045,6 +35069,11 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Common
+  - set_number: RD/B241-JP004
+    set_name: Battle Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/MAX2-KR026
     set_name: Maximum Ultra Evolution Pack
@@ -69392,6 +69421,11 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Common
+  - set_number: RD/B241-JP002
+    set_name: Battle Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/MRP1-KR042
     set_name: Megaroad Pack
@@ -91791,12 +91825,18 @@ series:
 images:
 - index: 1
   image: Chromatographagas-RDKP12-JP-R.png
+- index: 2
+  image: Chromatographagas-RDS241-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP12-JP001
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Rare
+  - set_number: RD/S241-JP002
+    set_name: Special Victory Pack 2024 Vol.1
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: RD/KP12-KR001
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
@@ -92605,6 +92645,11 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Common
+  - set_number: RD/B241-JP010
+    set_name: Battle Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/KP12-KR013
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
@@ -98246,6 +98291,12 @@ sets:
     set_name: Legend Awakening Pack
     rarities:
     - Rare
+  - set_number: RD/B241-JP001
+    set_name: Battle Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Super Rare
+    - Ultra Rare
   ko:
   - set_number: RD/LGP1-KR019
     set_name: Legend Awakening Pack
@@ -102844,6 +102895,11 @@ sets:
     set_name: Oblivion of the Flash
     rarities:
     - Rare
+  - set_number: RD/B241-JP006
+    set_name: Battle Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/KP13-KR004
     set_name: Oblivion of the Flash
@@ -103711,6 +103767,11 @@ sets:
     set_name: Oblivion of the Flash
     rarities:
     - Rare
+  - set_number: RD/B241-JP008
+    set_name: Battle Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/KP13-KR016
     set_name: Oblivion of the Flash
@@ -103777,6 +103838,11 @@ sets:
     set_name: Oblivion of the Flash
     rarities:
     - Rare
+  - set_number: RD/B241-JP009
+    set_name: Battle Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/KP13-KR017
     set_name: Oblivion of the Flash
@@ -113496,12 +113562,18 @@ def: 1000
 images:
 - index: 1
   image: NegatworDragon-RDKP14-JP-C.png
+- index: 2
+  image: NegatworDragon-RDS241-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP14-JP034
     set_name: Phoenix of the Roaring Flame
     rarities:
     - Common
+  - set_number: RD/S241-JP003
+    set_name: Special Victory Pack 2024 Vol.1
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: RD/KP14-KR034
     set_name: Phoenix of the Roaring Flame
@@ -114327,6 +114399,11 @@ sets:
     set_name: Phoenix of the Roaring Flame
     rarities:
     - Rare
+  - set_number: RD/B241-JP011
+    set_name: Battle Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/KP14-KR045
     set_name: Phoenix of the Roaring Flame
@@ -115161,6 +115238,8 @@ property: Normal
 images:
 - index: 1
   image: LegendStrike-RDKP14-JP-UR.png
+- index: 2
+  image: LegendStrike-RDS241-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP14-JP057
@@ -115169,6 +115248,10 @@ sets:
     - Ultra Rare
     - Secret Rare
     - Over Rush Rare
+  - set_number: RD/S241-JP005
+    set_name: Special Victory Pack 2024 Vol.1
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: RD/KP14-KR057
     set_name: Phoenix of the Roaring Flame
@@ -115782,6 +115865,11 @@ sets:
     set_name: Phoenix of the Roaring Flame
     rarities:
     - Rare
+  - set_number: RD/B241-JP012
+    set_name: Battle Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/KP14-KR066
     set_name: Phoenix of the Roaring Flame
@@ -122070,6 +122158,11 @@ sets:
     set_name: Red Reboot of Darkness
     rarities:
     - Rare
+  - set_number: RD/B241-JP005
+    set_name: Battle Pack 2024 Vol.1
+    rarities:
+    - Common
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
