--- a/data/cards/06218704.yaml
+++ b/data/cards/06218704.yaml
@@ -134,6 +134,7 @@ sets:
     - Ultimate Rare
     - Secret Rare
     - Quarter Century Secret Rare
+    - Holographic Rare
   - set_number: AGOV-JP030
     set_name: Age of Overlord +1 Bonus Pack
     rarities:
