--- a/data/cards/03492538.yaml
+++ b/data/cards/03492538.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Só pode ser equipado a um monstro Inseto. Ele ganha 700 de ATK.
   ja: |-
-    <ruby>昆<rt>こん</rt></ruby><ruby>虫<rt>ちゅう</rt></ruby><ruby>族<rt>ぞく</rt></ruby>モンスターにのみ装備可能。①：装備モンスターの<ruby>攻<rt>こう</rt></ruby><ruby>撃<rt>げき</rt></ruby><ruby>力<rt>りょく</rt></ruby>は７００アップする。
+    昆虫族モンスターにのみ装備可能。①：装備モンスターの攻撃力は７００アップする。
   ko: |-
     곤충족 몬스터에만 장착 가능. ①: 장착 몬스터의 공격력은 700 올린다.
   zh-TW: |-
