--- a/data/cards/56741506.yaml
+++ b/data/cards/56741506.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>閃<rt>せん</rt></ruby><ruby>刀<rt>とう</rt></ruby><ruby>姫<rt>き</rt></ruby>－アザレア・テンペランス
   ja_romaji: Sentōki - Azarea Tenperansu
-  ko:
+  ko: 섬도희－아자레아 템페런스
   ko_rr:
   zh-TW:
   zh-CN:
@@ -25,7 +25,9 @@ text:
   ja: |-
     Ｌモンスターを含むモンスター２体以上
     このカードはＬ召喚でしかＥＸデッキから特殊召喚できない。このカード名の①の効果は１ターンに１度しか使用できない。①：このカードが特殊召喚した場合、自分の手札・墓地から魔法カード１枚を除外し、相手フィールドの攻撃力２５００以下のモンスター１体を対象として発動できる。その表側表示モンスターを装備魔法カード扱いでこのカードに装備する。②：このカードが戦闘で破壊された時に発動できる。自分の手札・墓地からこのカード以外の「閃刀」モンスター１体を特殊召喚する。
-  ko:
+  ko: |-
+    링크 몬스터를 포함하는 몬스터 2장 이상
+    이 카드는 링크 소환으로밖에 엑스트라 덱에서 특수 소환할 수 없다. 이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드를 특수 소환했을 경우, 자신의 패 / 묘지에서 마법 카드 1장을 제외하고, 상대 필드의 공격력 2500 이하의 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 앞면 표시 몬스터를 장착 마법 카드로 취급하고 이 카드에 장착한다. ②: 이 카드가 전투로 파괴되었을 때에 발동할 수 있다. 자신의 패 / 묘지에서 이 카드 이외의 "섬도" 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN:
 card_type: Monster
