--- a/data/cards/15198996.yaml
+++ b/data/cards/15198996.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドにモンスターが表側表示で特殊召喚された場合、その内の１体を対象として発動できる。このカードを手札から特殊召喚し、対象のモンスターを裏側守備表示にする。②：このカードが手札・フィールドから墓地へ送られた場合、フィールドのモンスター１体を対象として発動できる。そのモンスターを表側攻撃表示か裏側守備表示にする。
   ko: |-
-    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 몬스터가 앞면 표시로 특수 소환되었을 경우, 그 몬스터 1장을 대상으로 하고 발동할 수 있다. 이 카드를 패에서 특수 소환하고, 대상 몬스터를 뒷면 수비 표시로 한다. ②: 이 카드가 패 / 필드에서 묘지로 보내졌을 경우, 필드의 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 앞면 공격 표시 또는 뒷면 수비 표시로 한다.
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 몬스터가 앞면 표시로 특수 소환되었을 경우, 그 중의 1장을 대상으로 하고 발동할 수 있다. 이 카드를 패에서 특수 소환하고, 대상 몬스터를 뒷면 수비 표시로 한다. ②: 이 카드가 패 / 필드에서 묘지로 보내졌을 경우, 필드의 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 앞면 공격 표시나 뒷면 수비 표시로 한다.
   zh-TW: |-
     此卡名的①②效果，１回合各僅限使用１次。①：在怪獸以正面表示被特殊召喚至我方場上的狀況下，可將１隻該怪獸做為對象發動。從手牌特殊召喚此卡，將對象怪獸變為反面守備表示。②：在此卡從手牌・場上被送至墓地的狀況下，可將場上的１隻怪獸做為對象發動。將該怪獸變為正面攻擊表示或反面守備表示。
   zh-CN: |-
