--- a/data/cards/19299793.yaml
+++ b/data/cards/19299793.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>紅<rt>ぐ</rt></ruby><ruby>蓮<rt>れん</rt></ruby><ruby>王<rt>おう</rt></ruby> フレイム・クライム
   ja_romaji: Guren'ō Fureimu Kuraimu
-  ko:
+  ko: 홍련왕 플레임 크라임
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドに悪魔族チューナーが存在する場合、または相手フィールドに特殊召喚されたモンスターが存在する場合、自分・相手のメインフェイズに発動できる。このカードを手札から特殊召喚する。②：このカードが特殊召喚した場合に発動できる。自分フィールドの炎属性モンスターの種類×４００ダメージを相手に与える。③：このカードがＳ素材として墓地へ送られた場合に発動できる。デッキから通常罠カード１枚を墓地へ送る。
-  ko:
+  ko: |-
+    이 카드명의 ①②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 악마족 튜너가 존재할 경우, 또는 상대 필드에 특수 소환된 몬스터가 존재할 경우, 자신 / 상대의 메인 페이즈에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 이 카드를 특수 소환했을 경우에 발동할 수 있다. 자신 필드의 화염 속성 몬스터의 종류 × 400 데미지를 상대에게 준다. ③: 이 카드가 싱크로 소재로서 묘지로 보내졌을 경우에 발동할 수 있다. 덱에서 일반 함정 카드 1장을 묘지로 보낸다.
   zh-TW:
   zh-CN:
 card_type: Monster
