--- a/data/cards/21579049.yaml
+++ b/data/cards/21579049.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>白の循環礁<rt>ホワイト・サークル・リーフ</rt></ruby>
   ja_romaji: Howaito Sākuru Rīfu
-  ko:
+  ko: 화이트 서클 리프
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドの魚族モンスター１体を対象として発動できる。その魚族モンスターを破壊し、その同名モンスター１体をデッキから手札に加える。このカードの発動時に自分フィールドに魚族Ｓモンスターが存在していた場合、手札に加えず特殊召喚する事もできる。②：墓地のこのカードを除外し、自分の墓地の魚族の同名モンスター２体を対象として発動できる。その２体の内の１体をデッキの一番下に戻し、もう１体を特殊召喚する。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 어류족 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 어류족 몬스터를 파괴하고, 그와 같은 이름의 몬스터 1장을 덱에서 패에 넣는다. 이 카드의 발동시에 자신 필드에 어류족 싱크로 몬스터가 존재하고 있었을 경우, 패에 넣지 않고 특수 소환할 수도 있다. ②: 묘지의 이 카드를 제외하고, 자신 묘지의 어류족의 같은 이름의 몬스터 2장을 대상으로 하여 발동할 수 있다. 그 2장 중의 1장을 덱 맨 아래로 되돌리고, 나머지 1장을 특수 소환한다.
   zh-TW:
   zh-CN:
 card_type: Spell
