--- a/data/cards/42427230.yaml
+++ b/data/cards/42427230.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: ディーヴジャン
   ja_romaji: Dīvujan
-  ko:
+  ko: 디브전
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドの表側表示の「ディーヴジャン」を全てリリースして発動できる。リリースした数×２体まで、自分フィールドに「機械トークン」（機械族・炎・星１・攻／守２００）を特殊召喚する。このトークンが破壊された時に相手は１体につき５００ダメージを受ける。②：このカードが除外された場合、自分フィールドのトークンを任意の数だけ対象として発動できる。そのトークンを破壊する。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 앞면 표시의 "디브전"을 전부 릴리스하고 발동할 수 있다. 릴리스한 수 × 2장까지, 자신 필드에 "기계 토큰"(기계족 / 화염 / 레벨 1 / 공 200 / 수 200)을 특수 소환한다. 이 토큰이 파괴되었을 때에 상대는 1장당 500 데미지를 받는다. ②: 이 카드가 제외되었을 경우, 자신 필드의 토큰을 임의의 수만큼 대상으로 하고 발동할 수 있다. 그 토큰을 파괴한다.
   zh-TW:
   zh-CN:
 card_type: Monster
