--- a/data/cards/62967433.yaml
+++ b/data/cards/62967433.yaml
@@ -37,7 +37,7 @@ text:
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードのＸ素材を１つ取り除き、自分の墓地の通常罠カード１枚を対象として発動できる。そのカードをデッキの一番下に戻す。その後、自分は１枚ドローする。②：通常罠カードが発動した場合に発動できる。自分フィールドのＸ素材を１つ取り除き、手札からレベル４モンスター１体を特殊召喚する。
   ko: |-
     레벨 4 몬스터 × 2장 이상
-    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 엑시즈 소재를 1개 제거하고, 자신 묘지의 일반 함정 카드 1장을 대상으로 하여 발동할 수 있다. 그 카드를 덱 맨 아래로 되돌린다. 그 후, 자신은 덱에서 1장 드로우한다. ②: 일반 함정 카드가 발동했을 경우에 발동할 수 있다. 자신 필드의 엑시즈 소재를 1개 제거하고, 패에서 레벨 4 몬스터 1장을 특수 소환한다.
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 엑시즈 소재를 1개 제거하고, 자신 묘지의 일반 함정 카드 1장을 대상으로 하여 발동할 수 있다. 그 카드를 덱 맨 아래로 되돌린다. 그 후, 자신은 1장 드로우한다. ②: 일반 함정 카드가 발동했을 경우에 발동할 수 있다. 자신 필드의 엑시즈 소재를 1개 제거하고, 패에서 레벨 4 몬스터 1장을 특수 소환한다.
   zh-TW: |-
     等級４怪獸×２隻以上
     此卡名的①②效果，１回合各僅限使用１次。①：可去除此卡的１個超量素材，將我方墓地的１張通常陷阱卡做為對象發動。將該卡送回牌組的最下方。其後，我方從牌組抽１張牌。②：可在通常陷阱卡發動的狀況下發動。去除我方場上的１個超量素材，從手牌特殊召喚１隻等級４怪獸。
