--- a/data/cards/67853262.yaml
+++ b/data/cards/67853262.yaml
@@ -9,7 +9,7 @@ name:
   pt: Maga da Fidelidade
   ja: <ruby>神聖なる魔術師<rt>セインクレッド・マジシャン</rt></ruby>
   ja_romaji: Seinkureddo Majishan
-  ko:
+  ko: 세인크리드 매지션
   ko_rr:
   zh-TW:
   zh-CN: 崇高神圣魔术师
@@ -28,7 +28,8 @@ text:
     VIRE: Você pode escolher 1 Magia no seu Cemitério; adicione-a à sua mão e, depois, você pode Invocar por Invocação-Especial 1 "Maga da Fé" ou "Maga da Fidelidade" do seu Deck com a face para baixo em Posição de Defesa. Você só pode usar este efeito de "Maga da Fidelidade" uma vez por turno.
   ja: |-
     このカード名の効果は１ターンに１度しか使用できない。①：このカードがリバースした場合、自分の墓地の魔法カード１枚を対象として発動できる。そのカードを手札に加える。その後、デッキから「聖なる魔術師」か「神聖なる魔術師」１体を裏側守備表示で特殊召喚できる。
-  ko:
+  ko: |-
+    이 카드명의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 리버스했을 경우, 자신 묘지의 마법 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 패에 넣는다. 그 후, 덱에서 "성스러운 마술사"나 "세인크리드 매지션" 1장을 뒷면 수비 표시로 특수 소환할 수 있다.
   zh-TW:
   zh-CN: |-
     这个卡名的效果1回合只能使用1次。①：这张卡翻转的场合，可以以自己的墓地的1张魔法卡为对象发动。将那张卡加入手牌。那之后，可以从卡组以里侧守备表示特殊召唤1只「聖なる魔術師／神圣魔术师」或者「神聖なる魔術師／崇高神圣魔术师」。
