--- a/data/cards/69925461.yaml
+++ b/data/cards/69925461.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: トイ・タンク
   ja_romaji: Toi Tanku
-  ko:
+  ko: 토이 탱크
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の②③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードは魔法カード扱いで手札から魔法＆罠ゾーンにセットできる。②：魔法＆罠ゾーンにセットされたこのカードが墓地へ送られた場合に発動できる。このカードを特殊召喚する。③：このカードをリリースして発動できる。手札からレベル６以下のモンスター１体を特殊召喚する。自分フィールドに「トイ・ボックス」が存在する場合、代わりに自分の墓地から「トイ・タンク」を除くレベル６以下のモンスター１体を特殊召喚する事もできる。
-  ko:
+  ko: |-
+    이 카드명의 ②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드는 마법 카드로 취급하고 패에서 마법 & 함정 존에 세트할 수 있다. ②: 마법 & 함정 존에 세트된 이 카드가 묘지로 보내졌을 경우에 발동할 수 있다. 이 카드를 특수 소환한다. ③: 이 카드를 릴리스하고 발동할 수 있다. 패에서 레벨 6 이하의 몬스터 1장을 특수 소환한다. 자신 필드에 "토이 박스"가 존재할 경우, 대신에 자신 묘지에서 "토이 탱크"가 아닌 레벨 6 이하의 몬스터 1장을 특수 소환할 수도 있다.
   zh-TW:
   zh-CN:
 card_type: Monster
