--- a/data/cards/83962752.yaml
+++ b/data/cards/83962752.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: シンクロ・パニック
   ja_romaji: Shinkuro Panikku
-  ko:
+  ko: 싱크로 패닉
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカードは発動後、３回目の自分スタンバイフェイズに破壊される。①：自分フィールドの表側表示のＳモンスターが戦闘または相手の効果で破壊された場合、その内の１体を対象としてこのカードを発動できる。レベルの合計がそのモンスターと同じになるように、自分の墓地からチューナー１体とチューナー以外のモンスターを任意の数だけ特殊召喚する。この効果で特殊召喚したモンスターは、このターン戦闘・効果では破壊されない。②：このカードが魔法＆罠ゾーンに存在する限り、お互いにＳ召喚できない。
-  ko:
+  ko: |-
+    이 카드는 발동 후, 3회째의 자신 스탠바이 페이즈에 파괴된다. ①: 자신 필드의 앞면 표시의 싱크로 몬스터가 전투 또는 상대 효과로 파괴되었을 경우, 그 중의 1장을 대상으로 하고 이 카드를 발동할 수 있다. 레벨의 합계가 그 몬스터와 같아지도록, 자신 묘지에서 튜너 1장과 튜너 이외의 몬스터를 임의의 수만큼 특수 소환한다. 이 효과로 특수 소환한 몬스터는, 이 턴에 전투 / 효과로는 파괴되지 않는다. ②: 이 카드가 마법 & 함정 존에 존재하는 한, 서로 싱크로 소환할 수 없다.
   zh-TW:
   zh-CN:
 card_type: Trap
