--- a/data/cards/94185340.yaml
+++ b/data/cards/94185340.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: サクリファイス・ランクアップ
   ja_romaji: Sakurifaisu Rankuappu
-  ko:
+  ko: 새크리파이스 랭크 업
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：自分フィールドのＸモンスター１体を対象として発動できる。そのモンスターのＸ素材を２つ除外し、そのモンスターよりランクが１つ高いＸモンスター１体をＥＸデッキから特殊召喚する。この効果で特殊召喚したモンスターはこのターン攻撃できない。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드의 엑시즈 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 엑시즈 소재를 2개 제외하고, 그 몬스터보다 랭크가 1개 높은 엑시즈 몬스터 1장을 엑스트라 덱에서 특수 소환한다. 이 효과로 특수 소환한 몬스터는 이 턴에 공격할 수 없다.
   zh-TW:
   zh-CN:
 card_type: Spell
