--- a/data/cards/95207988.yaml
+++ b/data/cards/95207988.yaml
@@ -9,7 +9,7 @@ name:
   pt:
   ja: <ruby>地<rt>じ</rt></ruby><ruby>縛<rt>ばく</rt></ruby><ruby>共<rt>きょう</rt></ruby><ruby>振<rt>しん</rt></ruby>
   ja_romaji: Jibaku Kyōshin
-  ko:
+  ko: 지박공진
   ko_rr:
   zh-TW:
   zh-CN:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：ＥＸデッキから特殊召喚されたフィールドのモンスターが効果で破壊された場合、その内の１体を対象として発動できる。お互いにそのモンスターの攻撃力の半分のダメージを受ける。②：ＥＸデッキから特殊召喚された自分の闇属性Ｓモンスターが攻撃対象に選択された時、フィールドのカード１枚を対象として発動できる。そのカードを破壊する。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 엑스트라 덱에서 특수 소환된 필드의 몬스터가 효과로 파괴되었을 경우, 그 중의 1장을 대상으로 하고 발동할 수 있다. 서로 그 몬스터의 공격력 절반의 데미지를 받는다. ②: 엑스트라 덱에서 특수 소환된 자신의 어둠 속성 싱크로 몬스터가 공격 대상으로 선택되었을 때, 필드의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 파괴한다.
   zh-TW:
   zh-CN:
 card_type: Trap
