--- a/rush.yaml
+++ b/rush.yaml
@@ -137490,3 +137490,191 @@ sets:
     rarities:
     - Common
 yugipedia_page_id: 1046730
+---
+konami_id:
+name:
+  en: Love Study
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ラヴ・スタディ
+  ja_romaji: Ravu Sutadi
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have 6 or more monsters in your Graveyard and their total ATK is 0.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Place 1 card from your opponent's field on the bottom of the owner's Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- Love
+images:
+- index: 1
+  image: LoveStudy-RDORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP049
+    set_name: Over Rush Pack 2
+    rarities:
+    - Super Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1047346
+---
+konami_id:
+name:
+  en: Shiny Shady
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: シャイニーシェイディー
+  ja_romaji: Shainī Sheidī
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When your opponent Normal or Special Summons a monster during their turn, send 1 card from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Change up to 2 face-up Effect Monsters on the field to face-down Defense Position. Then, if you changed to face-down Defense Position a monster with 2600 or more original ATK on your opponent's field, gain 1500 LP.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+images:
+- index: 1
+  image: ShinyShady-RDORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP079
+    set_name: Over Rush Pack 2
+    rarities:
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1047357
+---
+konami_id:
+name:
+  en: Supreme Manchine Burning Overlord
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>超<rt>ちょう</rt></ruby><ruby>魔<rt>ま</rt></ruby><ruby>機<rt>き</rt></ruby><ruby>人<rt>じん</rt></ruby>バーニング・オーバーロード
+  ja_romaji: Chōmakijin Bāningu Ōbārōdo
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    If you have a face-up Machine Type Maximum Monster on your field, you can Normal Summon this card without Tributing.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If you have 3 or more DARK Attribute Machine Type Maximum Monsters in your Graveyard, pay 500 LP.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Until the end of your opponent's next turn, this card gains 1200 ATK and cannot be destroyed by card effects.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Machine / Effect
+attribute: DARK
+level: 5
+atk: 1900
+def: 0
+series:
+- Magnum Overlord
+images:
+- index: 1
+  image: SupremeManchineBurningOverlord-RDORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP069
+    set_name: Over Rush Pack 2
+    rarities:
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1047396
