--- a/data/rush/yugipedia1047357.yaml
+++ b/data/rush/yugipedia1047357.yaml
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change up to 2 face-up Effect Monsters on the field to face-down Defense Position. Then, if you changed to face-down Defense Position a monster with 2600 or more original ATK on your opponent's field, gain 1500 LP.
+    Change up to 2 face-up Effect Monsters on the field to face-down Defense Position. Then, if you changed a monster with 2600 or more original ATK on your opponent's field to face-down Defense Position by this effect, gain 1500 LP.
   de:
   es:
   fr:
