--- a/data/rush/yugipedia1047396.yaml
+++ b/data/rush/yugipedia1047396.yaml
@@ -38,7 +38,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Until the end of your opponent's next turn, this card gains 1200 ATK and cannot be destroyed by card effects.
+    Until the end of your opponent's next turn, this card gains 1200 ATK, and cannot be destroyed by card effects.
   de:
   es:
   fr:
@@ -54,8 +54,6 @@ attribute: DARK
 level: 5
 atk: 1900
 def: 0
-series:
-- Magnum Overlord
 images:
 - index: 1
   image: SupremeManchineBurningOverlord-RDORP2-JP-OP.png
