--- a/rush.yaml
+++ b/rush.yaml
@@ -137577,7 +137577,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change up to 2 face-up Effect Monsters on the field to face-down Defense Position. Then, if you changed to face-down Defense Position a monster with 2600 or more original ATK on your opponent's field, gain 1500 LP.
+    Change up to 2 face-up Effect Monsters on the field to face-down Defense Position. Then, if you changed a monster with 2600 or more original ATK on your opponent's field to face-down Defense Position by this effect, gain 1500 LP.
   de:
   es:
   fr:
@@ -137645,7 +137645,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Until the end of your opponent's next turn, this card gains 1200 ATK and cannot be destroyed by card effects.
+    Until the end of your opponent's next turn, this card gains 1200 ATK, and cannot be destroyed by card effects.
   de:
   es:
   fr:
@@ -137661,8 +137661,6 @@ attribute: DARK
 level: 5
 atk: 1900
 def: 0
-series:
-- Magnum Overlord
 images:
 - index: 1
   image: SupremeManchineBurningOverlord-RDORP2-JP-OP.png
