--- a/data/cards/05182107.yaml
+++ b/data/cards/05182107.yaml
@@ -80,6 +80,11 @@ sets:
     set_name: Premium Pack 2024
     rarities:
     - Secret Rare
+  ko:
+  - set_number: 24PP-KRA30
+    set_name: Premium Pack 2024 1st Wave
+    rarities:
+    - Secret Rare
   zh-CN:
   - set_number: MGP8-SC195
     set_name: Mega Pack 08
