--- a/data/cards/33396948.yaml
+++ b/data/cards/33396948.yaml
@@ -430,6 +430,10 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: ''
+    set_name: Premium Pack 2024 1st Wave
+    rarities:
+    - Ultra Rare
 limit_regulation:
   tcg: Limited
   ocg: Limited
