--- a/data/cards/37351133.yaml
+++ b/data/cards/37351133.yaml
@@ -153,6 +153,13 @@ sets:
     - Common
     - Super Rare
     - Secret Rare
+  - set_number: 24PP-KRA20
+    set_name: Premium Pack 2024 1st Wave
+    rarities:
+    - Common
+    - Normal Parallel Rare
+    - Super Rare
+    - Secret Rare
   zh-CN:
   - set_number: MGP4-SC060
     set_name: Mega Pack 04
