--- a/data/cards/38033121.yaml
+++ b/data/cards/38033121.yaml
@@ -806,6 +806,10 @@ sets:
     - Secret Rare
     - Ultimate Rare
     - Quarter Century Secret Rare
+  - set_number: QCUC-JP002
+    set_name: Quarter Century Unity & Pride Campaign side:Unity
+    rarities:
+    - Quarter Century Secret Rare
   ko:
   - set_number: MFC-KR000
     set_name: Magician's Force
