--- a/data/cards/09627468.yaml
+++ b/data/cards/09627468.yaml
@@ -89,6 +89,10 @@ sets:
     - Normal Parallel Rare
     - Super Rare
     - Secret Rare
+  - set_number: 24PP-KRA27
+    set_name: Premium Pack 2024 1st Wave
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
