--- a/data/cards/15198996.yaml
+++ b/data/cards/15198996.yaml
@@ -88,6 +88,10 @@ sets:
     - Normal Parallel Rare
     - Super Rare
     - Secret Rare
+  - set_number: 24PP-KRA24
+    set_name: Premium Pack 2024 1st Wave
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
