--- a/data/cards/21579049.yaml
+++ b/data/cards/21579049.yaml
@@ -43,6 +43,14 @@ sets:
     - Normal Parallel Rare
     - Super Rare
     - Secret Rare
+  ko:
+  - set_number: 24PP-KRA15
+    set_name: Premium Pack 2024 1st Wave
+    rarities:
+    - Common
+    - Normal Parallel Rare
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
