--- a/data/cards/38105306.yaml
+++ b/data/cards/38105306.yaml
@@ -35,7 +35,7 @@ images:
   image: LifeShaver-KC01-JP-UR.png
 sets:
   en:
-  - set_number: KC01-JP001
+  - set_number: KC01-EN002
     set_name: 25th Anniversary Ultimate Kaiba Set
     rarities:
     - Ultra Rare
