--- a/data/cards/62967433.yaml
+++ b/data/cards/62967433.yaml
@@ -99,6 +99,10 @@ sets:
     - Normal Parallel Rare
     - Super Rare
     - Secret Rare
+  - set_number: 24PP-KRA28
+    set_name: Premium Pack 2024 1st Wave
+    rarities:
+    - Secret Rare
   zh-CN:
   - set_number: NE01-SC031
     set_name: 'Nature Pack: Blazing Heroes'
