--- a/data/cards/67853262.yaml
+++ b/data/cards/67853262.yaml
@@ -77,6 +77,11 @@ sets:
     set_name: Premium Pack 2024
     rarities:
     - Secret Rare
+  ko:
+  - set_number: 24PP-KRA31
+    set_name: Premium Pack 2024 1st Wave
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
