--- a/data/cards/76823930.yaml
+++ b/data/cards/76823930.yaml
@@ -80,6 +80,10 @@ sets:
     - Common
     - Secret Rare
     - Quarter Century Secret Rare
+  - set_number: 24PP-KRA32
+    set_name: Premium Pack 2024 1st Wave
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
