--- a/data/cards/85758066.yaml
+++ b/data/cards/85758066.yaml
@@ -35,7 +35,7 @@ images:
   image: MagicalTrickMirror-KC01-JP-UR.png
 sets:
   en:
-  - set_number: KC01-JP001
+  - set_number: KC01-EN003
     set_name: 25th Anniversary Ultimate Kaiba Set
     rarities:
     - Ultra Rare
