--- a/data/cards/86605515.yaml
+++ b/data/cards/86605515.yaml
@@ -87,6 +87,10 @@ sets:
     - Normal Parallel Rare
     - Super Rare
     - Secret Rare
+  - set_number: 24PP-KRA22
+    set_name: Premium Pack 2024 1st Wave
+    rarities:
+    - Secret Rare
   zh-CN:
   - set_number: NE01-SC007
     set_name: 'Nature Pack: Blazing Heroes'
