--- a/data/cards/96084564.yaml
+++ b/data/cards/96084564.yaml
@@ -98,6 +98,10 @@ sets:
     - Normal Parallel Rare
     - Super Rare
     - Secret Rare
+  - set_number: 24PP-KRA21
+    set_name: Premium Pack 2024 1st Wave
+    rarities:
+    - Secret Rare
   zh-CN:
   - set_number: NE01-SC021
     set_name: 'Nature Pack: Blazing Heroes'
