--- a/data/cards/98462037.yaml
+++ b/data/cards/98462037.yaml
@@ -103,6 +103,10 @@ sets:
     - Normal Parallel Rare
     - Super Rare
     - Secret Rare
+  - set_number: 24PP-KRA29
+    set_name: Premium Pack 2024 1st Wave
+    rarities:
+    - Secret Rare
   zh-CN:
   - set_number: NE01-SC022
     set_name: 'Nature Pack: Blazing Heroes'
