--- a/data/rush/yugipedia1047357.yaml
+++ b/data/rush/yugipedia1047357.yaml
@@ -46,6 +46,7 @@ sets:
   - set_number: RD/ORP2-JP079
     set_name: Over Rush Pack 2
     rarities:
+    - Ultra Rare
     - Over Rush Rare
 is_translation_unofficial:
   name:
