--- a/rush.yaml
+++ b/rush.yaml
@@ -137597,6 +137597,7 @@ sets:
   - set_number: RD/ORP2-JP079
     set_name: Over Rush Pack 2
     rarities:
+    - Ultra Rare
     - Over Rush Rare
 is_translation_unofficial:
   name:
@@ -137669,6 +137670,7 @@ sets:
   - set_number: RD/ORP2-JP069
     set_name: Over Rush Pack 2
     rarities:
+    - Super Rare
     - Over Rush Rare
 is_translation_unofficial:
   name:
