--- a/data/cards/yugipedia1048154.yaml
+++ b/data/cards/yugipedia1048154.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>刻まれし魔の鎮魂棺<rt>デモンスミス・レクイエム</rt></ruby>
-  ja_romaji:
+  ja_romaji: Demonsumisu Rekuiemu
   ko:
   ko_rr:
   zh-TW:
