--- a/data/cards/yugipedia1048149.yaml
+++ b/data/cards/yugipedia1048149.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>刻まれし魔<rt>デモンスミス</rt></ruby>ラクリモーサ
-  ja_romaji:
+  ja_romaji: Demonsumisu Rakurimōsa
   ko:
   ko_rr:
   zh-TW:
@@ -32,7 +32,7 @@ attribute: LIGHT
 level: 6
 atk: 2400
 def: 2400
-materials: 2 LIGHT Fiend monsters
+materials: 2 LIGHT Fiend-Type monsters
 series:
 - Fiendsmith
 images:
