--- a/data/cards/yugipedia1048152.yaml
+++ b/data/cards/yugipedia1048152.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>刻まれし魔<rt>デモンスミス</rt></ruby>ディエスイレ
-  ja_romaji:
+  ja_romaji: Demonsumisu Diesu Ire
   ko:
   ko_rr:
   zh-TW:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     "The Fiendsmith" + 2 LIGHT Fiend monsters
-    (Quick Effect): You can negate the effects of a number of face-up cards on the field until the end of this turn, up to the total Link Rating of the Link Monsters equipped to this card. If this card is sent to the GY: You can shuffle 1 other LIGHT Fiend monster from your GY into the Deck/Extra Deck, then target 1 card on the field; send it to the GY. You can only use each effect of "Fiendsmith Dies Irae" once per turn.
+    (Quick Effect): You can negate the effects of a number of face-up cards on the field up to the total Link Ratings of the Link Monsters equipped to this card, until the end of this turn. If this card is sent to the GY: You can shuffle 1 other LIGHT Fiend monster from your GY into the Deck/Extra Deck, then target 1 card on the field; send it to the GY. You can only use each effect of "Fiendsmith Dies Irae" once per turn.
   de:
   es:
   fr:
@@ -32,7 +32,7 @@ attribute: LIGHT
 level: 9
 atk: 2800
 def: 2400
-materials: '"The Fiendsmith" + 2 LIGHT Fiend monsters'
+materials: '"The Fiendsmith" + 2 LIGHT Fiend-Type monsters'
 series:
 - Fiendsmith
 images:
