--- a/data/cards/yugipedia1048158.yaml
+++ b/data/cards/yugipedia1048158.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>刻まれし魔の詠聖<rt>デモンスミス・トラクトゥス</rt></ruby>
-  ja_romaji:
+  ja_romaji: Demonsumisu Torakutusu
   ko:
   ko_rr:
   zh-TW:
