--- a/data/cards/yugipedia1048160.yaml
+++ b/data/cards/yugipedia1048160.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>刻まれし魔の讃聖<rt>デモンスミス・サンクトゥス</rt></ruby>
-  ja_romaji:
+  ja_romaji: Demonsumisu Sankutusu
   ko:
   ko_rr:
   zh-TW:
