--- a/data/cards/yugipedia1048162.yaml
+++ b/data/cards/yugipedia1048162.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>刻まれし魔の楽園<rt>デモンスミス・イン・パラディズム</rt></ruby>
-  ja_romaji:
+  ja_romaji: Demonsumisu in Paradizumu
   ko:
   ko_rr:
   zh-TW:
