--- a/data/cards/34193084.yaml
+++ b/data/cards/34193084.yaml
@@ -8,7 +8,7 @@ name:
   it: Paura dall'Oscurità
   pt: Medo do Escuro
   ja: <ruby>闇<rt>やみ</rt></ruby>よりの<ruby>恐<rt>きょう</rt></ruby><ruby>怖<rt>ふ</rt></ruby>
-  ja_romaji: Yami-yori no Kyōfu
+  ja_romaji: Yami yori no Kyōfu
   ko: 어둠에서 오는 공포
   ko_rr:
   zh-TW: 來自黑暗的恐懼
