--- a/data/cards/71200730.yaml
+++ b/data/cards/71200730.yaml
@@ -8,7 +8,7 @@ name:
   it: Disperazione dall'Oscurità
   pt: Desespero do Escuro
   ja: <ruby>闇<rt>やみ</rt></ruby>より<ruby>出<rt>い</rt></ruby>でし<ruby>絶<rt>ぜつ</rt></ruby><ruby>望<rt>ぼう</rt></ruby>
-  ja_romaji: Yami-yori Ideshi Zetsubō
+  ja_romaji: Yami yori Ideshi Zetsubō
   ko: 어둠에서 나온 절망
   ko_rr:
   zh-TW: 出自黑暗的絕望
