--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -5974,6 +5974,18 @@
   ko_rr: Gogogo
   zh-TW: 隆隆隆
   zh-CN:
+- en: Fiendsmith
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: デモンスミス
+  ja_romaji: Demonsumisu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
 - en: Gishki
   de: Gishki
   es: Gishki
