--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -5962,6 +5962,18 @@ Gogogo:
   ko_rr: Gogogo
   zh-TW: 隆隆隆
   zh-CN:
+Fiendsmith:
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: デモンスミス
+  ja_romaji: Demonsumisu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
 Gishki:
   de: Gishki
   es: Gishki
