--- a/data/cards/46939151.yaml
+++ b/data/cards/46939151.yaml
@@ -46,7 +46,11 @@ series:
 - Earthbound
 images:
 - index: 1
+  image: EarthboundPrisonerGroundKeeper-AC03-JP-NPR.png
+  illustration: EarthboundPrisonerGroundKeeper-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: EarthboundPrisonerGroundKeeper-MZMI-EN-R-1E.png
+  illustration: EarthboundPrisonerGroundKeeper-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: MZMI-EN027
