--- a/data/cards/76823930.yaml
+++ b/data/cards/76823930.yaml
@@ -38,7 +38,11 @@ card_type: Trap
 property: Continuous
 images:
 - index: 1
+  image: UltimeatOffering-24PP-JP-ScR.png
+  illustration: UltimeatOffering-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: UltimeatOffering-PHNI-EN-C-1E.png
+  illustration: UltimeatOffering-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: PHNI-EN100
