--- a/data/cards/82983267.yaml
+++ b/data/cards/82983267.yaml
@@ -40,7 +40,7 @@ series:
 - Purrely
 images:
 - index: 1
-  image: Purrelyeap-AMDE-EN-R-1E.png
+  image: Purrelyeap-OP24-EN-SR-UE.png
 sets:
   en:
   - set_number: AMDE-EN024
