--- a/data/rush/17483.yaml
+++ b/data/rush/17483.yaml
@@ -68,6 +68,10 @@ sets:
     set_name: Rush Duel Card Game Gum
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/ORP2-JP056
+    set_name: Over Rush Pack 2
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: RD/KP09-KRS01
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
