--- a/data/tcg-speed-skill/yugipedia585580.yaml
+++ b/data/tcg-speed-skill/yugipedia585580.yaml
@@ -53,7 +53,7 @@ effect:
   zh-TW:
   zh-CN:
 character: Seto Kaiba
-image_front: Beatdown-SS02-EN-C-1E.png
+image_front: Beatdown-JMPS-EN-UR-LE.png
 image_back: SetoKaiba-SkillCard-EN-Back.png
 sets:
   en:
