--- a/data/rush/18400.yaml
+++ b/data/rush/18400.yaml
@@ -58,6 +58,10 @@ sets:
     set_name: Yu-Gi-Oh! Rush Duel Duel Disk Yudias Version
     rarities:
     - Secret Rare
+  - set_number: RD/ORP2-JP057
+    set_name: Over Rush Pack 2
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: RD/SR02-KR004
     set_name: Secret Record Pack 2 Vol.2
