--- a/rush.yaml
+++ b/rush.yaml
@@ -137746,3 +137746,77 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1047788
+---
+konami_id:
+name:
+  en: Transamu Power Rainac
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: トランザム・パワーライナック
+  ja_romaji: Toranzamu Pawārainakku
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Shuffle 2 monsters from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This turn, this card gains 1000 ATK, but it cannot attack directly. Then, if you shuffled "Transamu Ephyrai" to meet the requirement, this card gains 2600 ATK this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Fusion / Effect
+attribute: LIGHT
+level: 7
+atk: 2600
+def: 1600
+materials:
+  en: |-
+    "Transamu Rainac" + 1 Level 4 Galaxy Type monster
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Transamu
+images:
+- index: 1
+  image: TransamuPowerRainac-RDORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP058
+    set_name: Over Rush Pack 2
+    rarities:
+    - Ultra Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1048633
