--- a/data/cards/yugipedia1048630.yaml
+++ b/data/cards/yugipedia1048630.yaml
@@ -7,7 +7,7 @@ name:
   fr:
   it:
   pt:
-  ja: <ruby>地<rt>じ</rt></ruby><ruby>獄<rt>ごく</rt></ruby><ruby>人<rt>にん</rt></ruby><ruby>形<rt>ぎやう</rt></ruby>の<ruby>館<rt>やかた</rt></ruby>
+  ja: <ruby>地<rt>じ</rt></ruby><ruby>獄<rt>ごく</rt></ruby><ruby>人<rt>にん</rt></ruby><ruby>形<rt>ぎょう</rt></ruby>の<ruby>館<rt>やかた</rt></ruby>
   ja_romaji: Jigoku Ningyō no Yakata
   ko:
   ko_rr:
