--- a/data/cards/91706817.yaml
+++ b/data/cards/91706817.yaml
@@ -36,6 +36,8 @@ text:
     这个卡名的①②效果1回合只能有1次使用其中任意1个。①：可以以场上的1只表侧表示怪兽为对象发动。从那只怪兽的操作者来看的对手受到自身的手牌的数量×200伤害。那之后，对象怪兽的效果直到回合结束时无效。②：自己或者对手受到效果伤害的场合，可以将墓地的这张卡除外发动。从手牌或卡组选1张通常陷阱卡盖放到自己的场上。是从手牌盖放的场合，那张卡在盖放的回合也能发动。
 card_type: Spell
 property: Normal
+series:
+- Blue Tears
 images:
 - index: 1
   image: AngelofBlueTears-MAZE-EN-R-1E.png
