--- a/data/cards/23720856.yaml
+++ b/data/cards/23720856.yaml
@@ -9,7 +9,7 @@ name:
   pt: Zubababancho Gagagacasaco
   ja: ズバババンチョー－<ruby>ＧＣ<rt>ガガガコート</rt></ruby>
   ja_romaji: Zubaba Banchō - Gagaga Kōto
-  ko: 도도도 드워프－<ruby>GG<rt>고고고 글로브</rt></ruby>
+  ko: 주바바 반초－<ruby>GC<rt>가가가 코트</rt></ruby>
   ko_rr: Jubaba Bancho - Gagaga Koteu
   zh-TW: 唰啦啦番長－我我我外套
   zh-CN: 刷拉拉番长－我我我外套
