--- a/data/cards/59724555.yaml
+++ b/data/cards/59724555.yaml
@@ -9,7 +9,7 @@ name:
   pt: Dodododanão Gogogogluva
   ja: ドドドドワーフ－<ruby>ＧＧ<rt>ゴゴゴグローブ</rt></ruby>
   ja_romaji: Dododo Dowāfu - Gogogo Gurōbu
-  ko: 도도도 드워프－GG
+  ko: 도도도 드워프－<ruby>GG<rt>고고고 글로브</rt></ruby>
   ko_rr: Dododo Deuwopeu - Gagaga Geullobeu
   zh-TW: 怒怒怒矮人－隆隆隆手套
   zh-CN: 怒怒怒矮人－隆隆隆手套
