--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -2386,6 +2386,18 @@
   ko_rr: Jeal
   zh-TW:
   zh-CN:
+- en: Blue Tears
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: 青い涙
+  ja_romaji: Aoi Namida
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
 - en: Tearlaments
   de: Tränenklage
   es: Tiagrimentos
