--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -2386,6 +2386,18 @@ Zexal:
   ko_rr: Jeal
   zh-TW:
   zh-CN:
+Blue Tears:
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: 青い涙
+  ja_romaji: Aoi Namida
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
 Tearlaments:
   de: Tränenklage
   es: Tiagrimentos
